LDEV-4054: Updating and fixing labels
There's quite a lot of work required with labels and it's not jsut translations but rearringing them according to language, string lenght, etc. Also we shouild be more accurate in naming users. When we are referring to students, we should call them students instead of users. Quite a few of these instances in this commit

--- a/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_central/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = lams_central
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 08:59:13 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:47:14 CST 2018 
  
 #=================== labels for LAMS Central =================# 
 
@@ -33,7 +33,6 @@ no.such.learningdesign.exist  =No Learning Design with learning_design_id of:{0}
 no.such.user.exist  =No such User with a user_id of: {0} exists.
 no.such.workspace.exist  =No such WorkspaceFolder with workspace_folder_id of:{0} exists.
 delete.resource.error  =Cannot delete the resource: {0}
-delete.resource.error.value.miss  =deleteResource(Long resourceID, String resourceType, Integer userID) requires a value for resourceID, resourceType and userID.
 delete.lesson.error  =LAMS does not support deleting a lesson via the workspace interface.
 delete.folder.error  =Cannot delete this folder as it is the Root folder.
 delete.learningdesign.error  =Cannot delete design with learning_design_id of : {0} as it is READ ONLY.
@@ -47,14 +46,12 @@ no.such.workspace  =No such workspaceFolder with a workspace_folder_id of {0} ex
 learningdesign.delete  =Learning design deleted:{0}
 learningdesign.readonly  =Cannot delete design with learning_design_id of:{0} as it is READ ONLY.
 move.resource.error  =Cannot move the resource:{0}
-move.resrouce.error.value.miss  =moveResource(Long resourceID,Integer targetFolderID, String resourceType, Integer userID) requires a value for resourceID, targetFolderID, resourceType and userID
 unsupport.move  =LAMS does not support moving a file via the workspace interface.
 creating.workspace.folder.error  =Exception occured while creating workspaceFolderContent:{0}.
 resource.already.exist  =The resource {0} already exists in the repository: {1}.
 no.such.content  =No such content with versionID of {0} found in repository {1}.
 content.delete.success  =Content successfully deleted.
 rename.resource.error  =Cannot rename the resource: {0}
-rename.resource.error.miss.vaue  =renameResource(Long resourceID,Integer newName, String resourceType, Integer userID) requires a value for resourceID, targetFolderID, resourceType and userID.
 rename.resource.unspport  =LAMS does not support renaming a file via the workspace interface.
 folder.already.exist  =A folder with given name ''{0}'' already exists.
 organisations  =Courses
@@ -65,14 +62,11 @@ title.system.admin.window  =System Admin:: LAMS
 msg.loading.system.admin.window  =Loading
 title.admin.window  =Admin:: LAMS
 msg.loading.admin.window  =Loading Administration Environment.
-title.add.lesson.window  =Add Lesson:: LAMS
 msg.loading.add.lesson.window  =Loading Add Lesson Wizard.
 title.monitor.lesson.window  =Monitor Lesson:: LAMS
 msg.loading.monitor.lesson.window  =Loading Lesson Monitoring Environment.
 title.learner.window  =Learner:: LAMS
 msg.loading.learner.window  =Loading Learner Environment.
-title.change.password.window  =LAMS :: Change password
-title.password.changed.window  =LAMS :: Password changed
 title.error.window  =LAMS :: Error
 authoring.msg.save.success  =Congratulations, your content saved successfully!
 label.authoring.close  =Close
@@ -80,7 +74,6 @@ label.authoring.re.edit  =Re-edit
 index.welcome  =Welcome
 index.logout  =Logout
 index.refresh  =Refresh
-index.refresh.hint  =You may need click me after you add/remove course/subcourses/lessons
 index.myprofile  =Profile
 index.sysadmin  =Sys Admin
 index.courseman  =Course Mgt
@@ -88,7 +81,6 @@ index.author  =Author
 index.classman  =Manage Subcourses
 index.addlesson  =Add Lesson
 index.monitor  =Monitor
-index.participate  =Participate
 index.dummymonitor  =Dummy Monitor
 title.import.result  =Import tool content result
 title.import  =Import tool content
@@ -120,8 +112,6 @@ msg.no.more.detail  =No more detail
 403.title  =Your current role does not allow you to view this page. Please contact your system administrator if you believe you should have access to this page.
 msg.import.failed.unknown.reason  =No error message available.
 msg.import.file.not.found  =Selected file has not been uploaded by your browser. Please try again.
-title.profile.window  =LAMS :: Profile
-title.edit.profile.window  =LAMS :: Edit profile
 title.profile.edit.screen  =Edit profile
 label.name  =Name
 label.title  =Title
@@ -141,7 +131,6 @@ label.email  =Email
 label.language  =Language
 title.password.change.screen  =Change password
 msg.groups.empty  =No groups
-button.reset  =Reset
 label.postcode  =Postcode
 label.portrait.current  =Current Portrait
 label.portrait.upload  =Upload
@@ -150,7 +139,7 @@ title.portrait.change.screen  =Portrait
 title.change.portrait.window  =LAMS :: Change portrait
 error.portrait.not.image  =The file is not an image (PNG, GIF, JPG, WBMP and BMP formats allowed).
 msg.portrait.resized  =The image formats allowed are: PNG, GIF, JPG, WBMP and BMP.
-label.workspace.root_folder  =My Workspace
+label.workspace.root_folder  =My workspace
 msg.design.not.saved  =Your design is not saved, any changes you have made since you last saved will be lost.
 error.firstname.required  =First name is required.
 error.lastname.required  =Last name is required.
@@ -161,7 +150,6 @@ index.mycourses  =Courses
 title.export.choose.format  =Choose export content format
 msg.export.choose.format.instruction  =Please choose format which you want to export
 msg.export.choose.format.lams  =LAMS format
-msg.export.choose.format.ims  =IMS Learning Design Level A Format (This format cannot be reimported back into LAMS. Export only!)
 button.export  =Export
 label.open.lesson  =Open Lesson
 label.msg.status  =Status: {0}
@@ -207,14 +195,13 @@ error.forgot.password.username  =Please enter a username.
 button.select.another.importfile  =Select another file to import
 error.forgot.password.incorrect.key  =The request key is incorrect or has already been used. Please click the "Forgot your Password" link again to make a new request.
 lessonsearch.title  =Search learners in lesson
-lessonsearch.instuctions  =Please enter the login, first or last name of the learner. As you type the name of the matching learners will appear.
+lessonsearch.instuctions  =Please enter the login, first or last name of the learner.
 lessonsearch.results  =Lessons in which ''''{0}'''' has been found
 index.searchlesson  =Learner Search
 index.searchlesson.tooltip  =Search learners across lessons
 lessonsearch.noresults  =No Lessons found
 error.multiple.emails  =There are multiple users in LAMS with the given email. Email could not be sent. Please try again using your username, or contact your system administrator.
 public.folder  =Public Folder
-videorecorder.instructions.fck  =Click the record button to start and stop recording. Once a recording is completed, you can review it by clicking the play button. When ready to add the video, click the tick button. Having problems with recording? It might be that your network blocks the video recording ports. Contact your system administrator.
 index.coursegradebook  =Course Gradebook
 index.coursegradebook.tooltip  =Open course-wide Gradebook monitoring page
 index.coursegradebook.learner  =Gradebook
@@ -824,4 +811,4 @@ authoring.tbl.desc.question=These questions are for iRA and tRA. Click "Create Q
 authoring.tbl.desc.ae=State the questions for AE. Click "Create Question" to add more questions.
 
 
-#======= End labels: Exported 762 labels for en AU =====
+#======= End labels: Exported 749 labels for en AU =====
