--- a/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:57:10 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:50:50 CST 2018 
  
 #=================== labels for Gradebook =================# 
 
@@ -25,17 +25,17 @@ gradebook.columntitle.timeTaken  =Tiempo
 gradebook.columntitle.lessonFeedback  =Comentarios
 gradebook.columntitle.lessonName  =Nombre
 gradebook.columntitle.subGroup  =Curso/Clase
-gradebook.columntitle.startDate  =Fecha Comienzo
+gradebook.columntitle.startDate  =Fecha comienzo
 gradebook.columntitle.completeDate  =Fecha de finalizaci\u00f3n
-gradebook.columntitle.mark  =Nota
+gradebook.columntitle.mark  =Puntaje
 gradebook.columntitle.activity  =Actividad
 gradebook.columntitle.activityFeedback  =Comentarios sobre Actividad
 gradebook.columntitle.outputs  =Resultados de la actividad
 gradebook.columntitle.competences  =Competencias
 gradebook.columntitle.averageTimeTaken  =Promedio Tiempo
-gradebook.columntitle.averageMark  =Promedio Notas
+gradebook.columntitle.averageMark  =Puntaje promedio
 gradebook.columntitle.learnerName  =Estudiante
-gradebook.function.window.showColumns  =Esconder/Mostrar Columnas
+gradebook.function.window.showColumns  =Esconder/Mostrar columnas
 gradebook.function.error.enterNumber  =Entar un n\u00famero
 gradebook.function.search.title  =Buscar en Table
 gradebook.function.search.contains  =contiene
@@ -48,19 +48,19 @@ label.ok  =OK
 label.cancel  =Cancelar
 label.find  =Buscar
 label.reset  =Borrar
-gradebook.monitor.releasemarks.1  =Mostrar calificaciones a estudiantes
-gradebook.monitor.releasemarks.2  =Esconder
-gradebook.monitor.releasemarks.3  =calificaciones por esa lecci\u00f3n
+gradebook.monitor.releasemarks.1  =Compartir con
+gradebook.monitor.releasemarks.2  =Esconder de
+gradebook.monitor.releasemarks.3  =los estudiantes
 gradebook.monitor.releasemarks.check  =\u00bfEst\u00e1 seguro que quiere mostrar los puntajes a los estudiantes?
 gradebook.monitor.releasemarks.check2  =\u00bfEsta seguro que quiere esconder las calificaciones de los estudiantes?
 error.releasemarks.fail  =Ha ocurrido un error. Por favor contacte a su administrador de sistema.
-error.markhigher  =La nota debe ser menor a la calificaci\u00f3n m\u00e1xima
+error.markhigher  =El puntaje debe ser menor a la calificaci\u00f3n m\u00e1xima
 error.cellsave  =Ha ocurrido un error al tratar de guardar el contenido de la celda. Por favor contacte a su administrador de sistema
 label.error  =Error
 gradebook.export.activity  =Actividad
 gradebook.export.activities  =Actividades
 gradebook.export.outputs  =Resultados
-gradebook.export.average.lesson.mark  =Nota promedio de la lecci\u00f3n:
+gradebook.export.average.lesson.mark  =Puntaje promedio de la lecci\u00f3n:
 gradebook.export.average.lesson.time.taken  =Tiempo de finalizaci\u00f3n promedio de la lecci\u00f3n:
 gradebook.export.total.marks.for.lesson  =Total de calificaciones
 gradebook.export.total.mark  =Calificaci\u00f3n total
@@ -69,10 +69,10 @@ gradebook.export.lesson.summary  =Resumen de lecci\u00f3n
 gradebook.export.learner.view  =Vista de estudiantes
 gradebook.export.time.taken.seconds  =Tiempo de realizaci\u00f3n (en segundos)
 gradebook.export.average.time.taken.seconds  =Promedio de tiempo (en segundos)
-gradebook.export.user  =Usuario
+gradebook.export.user  =Estudiante
 gradebook.exportcourse.course.summary  =Resumen del curso
 gradebook.exportcourse.lessonFeedback  =Retroalimentaci\u00f3n de la lecci\u00f3n
-gradebook.exportcourse.mark  =Nota
+gradebook.exportcourse.mark  =Puntaje
 gradebook.exportcourse.lesson  =Lecci\u00f3n: {0}
 gradebook.exportcourse.progress  =Progreso
 gradebook.exportcourse.learner.name  =Nombre del estudiante
@@ -93,16 +93,16 @@ label.max.mark  =Resultado m\u00e1ximo
 label.actuals  =Real
 label.max  =M\u00e1ximo
 label.overall.totals  =Totales generales
-audit.lesson.change.mark  =Marca cambiada para el usuario {0}. LessonId: {1}. nota original: {2}, nota nueva: {3}
-audit.activity.change.mark  =Marca cambiada para el usuario {0}. LessonId: {1}. ActivityId: {2}. nota original: {3}, nota nueva: {4}
+audit.lesson.change.mark  =Puntaje cambiado para el estudiante {0}. LessonId: {1}. puntaje original: {2}, puntaje nuevo: {3}
+audit.activity.change.mark  =Puntaje cambiado para el estudiante {0}. LessonId: {1}. ActivityId: {2}. puntaje original: {3}, puntaje nuevo: {4}
 audit.marks.released.on  =Los resultados se han compartidos con los estudiantes para lessonId {0}.
 audit.marks.released.off  =Los resultados han sido ocultos para lessonId {0}.
-gradebook.export.login  =Usuario
+gradebook.export.login  =Nombre de usuario
 button.help  =Ayuda
 button.help.tooltip  =Abrir ayuda
 gradebook.monitor.show.dates  =Mostrar fechas
 gradebook.monitor.hide.dates  =Esconder fechas
-gradebook.export.excel  =Exportar calificaciones
+gradebook.export.excel  =Exportar
 label.select.lessons.to.export  =Seleccione lecciones a exportar
 label.marks  =Calificaci\u00f3n
 label.number.learners.in.mark.range  =Estudiantes en este rango de calificaci\u00f3n
@@ -115,7 +115,7 @@ label.button.hide.weights  =Ocultar ponderaci\u00f3n
 label.weights.title  =Ponderaci\u00f3n de calificaciones
 gradebook.export.desc  =Seleccione las lecciones para exportar haciendo clic en los cuadrados al lado de las lecciones y luego haga clic en 'Exportar'.
 label.hide.lessons.to.export  =Ocultar lecciones para exportar
-label.activity.marks.weighted  =(Marcas de actividad ponderadas)
+label.activity.marks.weighted  =(Puntajes de actividad ponderadas)
 gradebook.export.max.time.taken.seconds  =Tiempo m\u00e1ximo (en segundos)
 gradebook.export.min.time.taken.seconds  =Tiempo m\u00ednimo (en segundos)
 
