--- a/lams_learning/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:51:09 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:51:49 CST 2018 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -23,7 +23,7 @@ label.synch.gate.title  =Puerta de sincronismo
 label.synch.gate.message  =Se ha detenido en esta puerta. No puede continuar hasta que todo el grupo/clase llegue hasta este punto.
 label.permission.gate.title  =Puerta de Permiso
 label.permission.gate.message  =Se ha detenido en esta puerta. No puede continuar hasta que el instructor abra la misma.
-label.schedule.gate.title  =Puerta de Tiempo
+label.schedule.gate.title  =Puerta de tiempo
 label.schedule.gate.open.message  =Esta puerta de tiempo se abrir\u00e1 en:
 label.schedule.gate.close.message  =Esta puerta de tiempo se cerrar\u00e1 en:
 label.gate.waiting.learners  ={0} de {1} estas esperando en la puerta.
@@ -33,24 +33,24 @@ label.view.groups.title  =Grupos
 label.view.view.groups.wait.message  =Algunas de las siguientes actividades requiren grupos. No se puede continuar hasta que los grupos no hayan sido definidos por el instructor. Presione el bot\u00f3n de Continuar si la puerta se encuentra abierta. Esta pag\u00edna se autocargara en un minuto.
 label.grouping.preview.message  =Como esta es una vista previa, presionando el bot\u00f3n de Continuar seleccionar\u00e1 un grupo automaticamente. Normalmente, el estudiate(s) esperar\u00eda aqui hasta que el grupo sea formado.
 message.window.closing  =Por favor cierre esta ventana.
-mynotes.title  =Mis Anotaciones
+mynotes.title  =Mis notas
 mynotes.view.all.button  =Ver todas
-mynotes.add.new.button  =Agregar Anotaci\u00f3n
-mynotes.notebook.save.button  =Nota Personal
-mynotes.journal.save.button  =Nota para el Instructor
-mynotes.signature.JOURNAL.heading  =Notas para el Instructor
-mynotes.signature.SCRATCHPAD.heading  =Notas Personales
+mynotes.add.new.button  =Nueva anotaci\u00f3n
+mynotes.notebook.save.button  =Anotaci\u00f3n personal
+mynotes.journal.save.button  =Anotaci\u00f3n para compartir con el Instructor
+mynotes.signature.JOURNAL.heading  =Anotaci\u00f3n para el Instructor
+mynotes.signature.SCRATCHPAD.heading  =Anotaciones personales
 mynotes.entry.title.label  =T\u00edtulo
 mynotes.entry.create.date.label  =Fecha creaci\u00f3n
 mynotes.entry.last.modified.label  =\u00daltima edici\u00f3n
-mynotes.entry.entry.label  =Entradas
+mynotes.entry.entry.label  =Anotaci\u00f3n
 mynotes.edit.heading  =Editar: {0}
 label.cancel.button  =Cancelar
 label.edit.button  =Editar
 mynotes.entry.submitted.by  =Enviado por: {0}
 label.close.button  =Cerrar
-mynotes.journals.title  =Notas compartidas con el Tutor
-mynotes.entry.no.title.label  =Sin T\u00edtulo
+mynotes.journals.title  =Anotaciones compartidas con el Instructor
+mynotes.entry.no.title.label  =Sin t\u00edtulo
 message.progress.broken  =Ha ocurrido un error y LAMS no puede recalcular la actividad que le corresponde en este momento. Es probable que el instructor este editando esta lecci\u00f3n.
 message.progress.broken.try.resume  =Cierre y vuelva a abrir esta ventana para continuar. Si este error se produce de nuevo, espere unos minutos y vuelva a intentarlo.
 label.branching.wait.message  =Est\u00e1 parado en una bifurcaci\u00f3n de la rama. No puedes continuar hasta que tu rama sea seleccionada en el seguimiento
@@ -69,11 +69,11 @@ label.learner.choice.group.message  =Por favor seleccione un grupo. Note que alg
 label.choose.group.button  =Seleccione
 label.condition.gate.title  =Puerta condicional
 label.condition.gate.close.message  =Usted ha llegado a una puerta condicional. Usted no ha cumplido con alguna condici\u00f3n en las actividades anteriores.  Por favor, revea las actividades y corrija sus respuestas anteriores.
-label.presence  =Estudiantes online
+label.presence  =Estudiantes conectados
 label.optional.maxActivitiesReached  =Ya ha finalizado el n\u00famero m\u00e1ximo de actividades opcionales.
 label.optional.maxSequencesReached  =Ya ha finalizado el n\u00famero m\u00e1ximo de secuencias opcionales.
 label.view.groups.learners  =Estudiantes en los grupos
-mynotes.signature.unknown.heading  =Otras notas
+mynotes.signature.unknown.heading  =Otras anotaciones
 label.print  =Imprimir
 message.released.lessons  =Usted est\u00e1 ahora en condiciones de participar en las siguientes lecciones: {0}.
 learner.im.title  =Mensajer\u00eda instant\u00e1nea
@@ -89,7 +89,7 @@ label.learner.progress.activity.tostart.tooltip  =Debe completar las actividades
 label.learner.progress.activity.support.tooltip  =Haga doble clic para participar en esta actividad adjunta
 button.exit  =Salir
 button.save  =Guardar
-label.learner.progress.notebook  =Notas
+label.learner.progress.notebook  =Anotaciones
 label.learner.progress.support  =Actividades adjuntas
 label.submit.button  =Seleccionar
 label.learner.progress.review.activity  =Revisar actividad
@@ -102,7 +102,7 @@ label.schedule.gate.open.remaining  =Usted solo podr\u00e1 pasar esta puerto y c
 message.lesson.restart  =Comenzar la lecci\u00f3n desde el principio nuevamente
 message.lesson.restart.button  =Re-comenzar
 message.learner.progress.restart.confirm  =\u00bfEst\u00e1 seguro de que desea iniciar la lecci\u00f3n desde el comienzo nuevamente?
-mynotes.add.new.current.lesson.button  =A\u00f1adir notar en esta lecci\u00f3n
+mynotes.add.new.current.lesson.button  =Nueva anotaci\u00f3n
 label.group.confirm.header  =Selecci\u00f3n de grupo
 label.group.confirm.button  =Confirmar
 label.group.confirm.areyoujoining  =\u00bfUnirse al grupo
@@ -112,7 +112,7 @@ gradebook.columntitle.mark  =Puntaje
 gradebook.columntitle.activity  =Actividad
 gradebook.columntitle.averageMark  =Puntaje promedio
 gradebook.columntitle.progress  =Progreso
-gradebook.lesson.complete  =Puntaje para esta lecci\u00f3n
+gradebook.lesson.complete  =Puntaje de lecci\u00f3n
 gradebook.learner.lesson.mark  =Su puntaje
 label.kumalive.rubric.name  =Ingrese nombre de r\u00fabrica
 label.kumalive.rubric.up  =Mover hacia arriba
