--- a/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_monitoring/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = monitor_java
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 08:58:45 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:48:32 CST 2018 
  
 #=================== labels for Monitor (Java) =================# 
 
@@ -20,7 +20,7 @@ label.gate.closed  =Cerrar
 label.gate.waiting.learners  ={0} de {1} estan esperando en la puerta.
 label.grouping.max.num.in.group.heading  =M\u00e1ximo n\u00famero de grupos:
 label.grouping.general.instructions.heading  =Instrucciones Generales
-label.grouping.general.instructions.line1  =Ponga a los estudiantes en sus grupos. Inicialmente usted pued agregar o eliminar usuarios, pero una ves estos groups han sido usados (cuando el estudiante empiece una actividad que utilize estos grupos) no podr\u00e1 eliminar estudiantes de sus grupos.
+label.grouping.general.instructions.line1  =Ponga a los estudiantes en sus grupos. Inicialmente usted puede agregar o eliminar estudiantes, pero una ves estos groups han sido usados (cuando el estudiante empiece una actividad que utilice estos grupos) no podr\u00e1 eliminar estudiantes de sus grupos.
 label.grouping.general.instructions.line2  =Para crear un group, simplemente presione el bot\u00f3n de "+". Para remover un grupo en el bot\u00f3n de "'-". Para asignar estudiantes a grupos, tome el nombre del estudiante y arrastrelo al grupo deseado. Los cambios ser\u00e1n guardados ni bien se realizen.
 label.grouping.group.heading  =Grupos
 label.grouping.non.grouped.users.heading  =Estudiantes sin grupos
@@ -48,15 +48,15 @@ force.complete.stop.message.activity.done  =No se han realizado cambios ya que l
 force.complete.stop.message.grouping.error  =La finalizaci\u00f3n forzada ha sido detenida en la actividad de grupo "{0}" debido a un error de sistema.
 force.complete.stop.message.grouping  =La finalizaci\u00f3n forzada se ha detenido en la actividad de grupo "{0}" que no se puede completar.
 force.complete.stop.message.gate  =La finalizaci\u00f3n forzada ha sido detenida en la actividad puerta "{0}" porque esta no se ha abierto.
-force.complete.stop.message.completed.to.activity  =La terminaci\u00f3n forzada se ha realizado exitosamente
+force.complete.stop.message.completed.to.activity  =Se ha movido el estudiante a la actividad elegida.
 force.complete.stop.message.completed.to.end  =La finalizaci\u00f3n forzada ha concretado hasta terminar la lecci\u00f3n.
 force.complete.stop.message.stopped.unexpectedly  =La finalizaci\u00f3n forzada ha terminado de procesar. Por favor verifique el progreso del estudiante en la pesta\u00f1a de estudiantes.
 audit.lesson.created  =La Lecci\u00f3n "{0}" ha sido creada con dise\u00f1o "{1}", portfolio export para estudiantes configurado como {2}.
-label.branching.general.instructions  =Coloca a los participantes de la lecci\u00f3n en sus ramas. Inicialmente puedes a\u00f1adir y eliminar usuarios, pero una vez que el participante comienza una de la ramas no podr\u00e1s eliminar usuarios de ninguna de \u00e9stas. Si intentas eliminar a alguien de una rama y no se elimina, comprueba su progreso- si comienza a utilizar una rama mientras est\u00e1s en esta pantalla no tendr\u00e1s ning\u00fan error pero no podr\u00e1s eliminarlo de la rama. Se podr\u00e1 a\u00f1adir grupos a las ramificaciones
+label.branching.general.instructions  =Coloca a los participantes de la lecci\u00f3n en sus ramas. Inicialmente puedes a\u00f1adir y eliminar estudiantes, pero una vez que el participante comienza una de la ramas no podr\u00e1s eliminar estudiantes de ninguna de \u00e9stas. Si intentas eliminar a alguien de una rama y no se elimina, comprueba su progreso- si comienza a utilizar una rama mientras est\u00e1s en esta pantalla no tendr\u00e1s ning\u00fan error pero no podr\u00e1s eliminarlo de la rama. Se podr\u00e1 a\u00f1adir grupos a las ramificaciones
 label.branching.branch.heading  =Rama
 label.branching.non.allocated.users.heading  =Estudiantes que no tienen asignada una rama
 label.branching.allocated.users.heading  =Miembros de la Rama seleccionada
-button.branching.add.user.to.branch  =A\u00f1adir seleccionado a la Rama
+button.branching.add.user.to.branch  =A\u00f1adir los seleccionados a la Rama
 button.branching.remove.user.from.branch  =Eliminar seleccionado de la Rama
 label.branching.general.group.instructions  =Coloca a los grupos en sus correspondientes ramas. Inicialmente puedes a\u00f1adir y eliminar grupos, pero una vez que un participante comienza una de las ramificaciones entonces no se podr\u00e1 eliminar ning\u00fan grupo. Se podr\u00e1 a\u00f1adir grupos a las ramificaciones.
 label.branching.non.allocated.groups.heading  =Grupos sin rama
@@ -109,7 +109,7 @@ wizard.splitLearners.splitSum  ={0} instancias de esta lecci\u00f3n ser\u00e1n c
 wizard.splitLearners.LearnersPerLesson.lbl  =N\u00famero de estudiantes por lecci\u00f3n:
 wizard.splitLearners.cb.lbl  =\u00bfDividir estudiantes en distintas copias de esta lecci\u00f3n?
 wizard.learner.enLiveEdit.cb.lbl  =Habilitar Edici\u00f3n en Vivo
-wizard.learner.enpres.cb.lbl  =Permitir ver que estudiantes estan online
+wizard.learner.enpres.cb.lbl  =Permitir ver que estudiantes est\u00e1n conectados
 wizard.wkspc.date.modified.lbl  =\u00daltima modificaci\u00f3n: {0}
 staff.lbl  =Tutores {0}
 add.lesson.panel.title  =Crear lecci\u00f3n en {0}
@@ -193,7 +193,7 @@ button.edit.class  =Editar Class
 button.edit.class.tooltip  =Editar la lista de los estudiantes y los tutores asignados a esta lecci\u00f3n
 button.open.im  =Abrir IM
 lesson.change.state  =Cambiar estado:
-lesson.select.state  =Seleccione estado
+lesson.select.state  =Cambiar estado
 button.apply  =Cambiar
 lesson.change.state.tooltip  =Cambie el estado de esta lecci\u00f3n basada en el men\u00fa desplegable de selecci\u00f3n
 lesson.start  =Inicio:
@@ -201,9 +201,9 @@ button.schedule  =Programar
 button.schedule.tooltip  =Horario de las clases para iniciar en un tiempo futuro
 button.start.now  =Iniciar ahora
 button.start.now.tooltip  =Comience la lecci\u00f3n inmediatamente
-lesson.enable.presence  =Permitir a los estudiantes a ver qui\u00e9n est\u00e1 en l\u00ednea
-lesson.enable.presence.alert  =Ahora los estudiantes pueden ver qui\u00e9n est\u00e1 en l\u00ednea
-lesson.disable.presence.alert  =Ahora los estudiantes no pueden ver qui\u00e9n est\u00e1 en l\u00ednea
+lesson.enable.presence  =Permitir a los estudiantes a ver qui\u00e9n est\u00e1 conectados
+lesson.enable.presence.alert  =Ahora los estudiantes pueden ver qui\u00e9n est\u00e1 conectados
+lesson.disable.presence.alert  =Ahora los estudiantes no pueden ver qui\u00e9n est\u00e1 conectados
 lesson.enable.im  =Habilitar mensajer\u00eda instant\u00e1nea
 lesson.enable.im.alert  =Mensajer\u00eda instant\u00e1nea est\u00e1 habilitada
 lesson.disable.im.alert  =Mensajer\u00eda instant\u00e1nea est\u00e1 desactivada
@@ -221,9 +221,9 @@ lesson.state.scheduled  =Programado
 lesson.state.started  =Comenzado
 lesson.state.suspended  =Suspendido
 lesson.state.finished  =Finalizado
-lesson.state.archived  =Archivado
+lesson.state.archived  =Archivada
 lesson.state.removed  =Eliminado
-lesson.state.action.disable  =Inhabilitar
+lesson.state.action.disable  =Deshabilitar
 lesson.state.action.activate  =Activar
 lesson.state.action.remove  =Eliminar
 lesson.state.action.archive  =Archivar
@@ -231,7 +231,7 @@ error.lesson.schedule.date  =No se ha seleccionado la fecha. Por favor, seleccio
 lesson.group.dialog.class  =Clase
 label.learner.progress.activity.current.tooltip  =Esta es la actividad actual
 label.learner.progress.activity.completed.tooltip  =Haga doble clic para ver esta actividad
-label.learner.progress.activity.attempted.tooltip  =El usuario ha intentado pero que a\u00fan no ha terminado esta actividad
+label.learner.progress.activity.attempted.tooltip  =El estudiante ha intentado pero que a\u00fan no ha terminado esta actividad
 label.learner.progress.activity.tostart.tooltip  =El estudiante necesita realizar esta actividad antes de que usted pueda acceder a ella
 label.learner.progress.activity.support.tooltip  =Haga doble clic para abrir la actividad de apoyo
 button.timechart  =Ver tabla de tiempo
@@ -242,8 +242,8 @@ learners.search.phrase.clear.tooltip  =Limpiar los resultados de b\u00fasqueda
 button.live.edit  =Edici\u00f3n en Vivo
 button.live.edit.tooltip  =Modifique el dise\u00f1o actual para esta lecci\u00f3n
 button.live.edit.confirm  =Edici\u00f3n en Vivo le permite modificar el dise\u00f1o mientras los estudiantes estan realizando la lecci\u00f3n. Si continue, el dise\u00f1o aparecer\u00e1 en la interfaz de autor\u00eda donde usted podr\u00e1 realizar las modificaciones. Una vez realizado los cambios, deber\u00e1 "Aplicar cambios" para que los estudiantes puedan continuar con la lecci\u00f3n. Si no lo hace, estos NO podr\u00e1n continuar. \u00bfDesea continuar?
-button.journal.entries  =Entradas de diario
-button.journal.entries.tooltip  =Ver todas las entradas al diario
+button.journal.entries  =Commentarios
+button.journal.entries.tooltip  =Ver todas los comentarios de los estudiantes.
 tab.lesson  =Lecci\u00f3n
 tab.sequence  =Secuencia
 tab.learners  =Estudiantes
@@ -262,10 +262,10 @@ button.view.learner  =Ver estudiante
 button.close  =Cerrar
 button.help  =Ayuda
 button.help.tooltip  =Abrir la p\u00e1gina de ayuda
-button.refresh  =Refrescar
+button.refresh  =Actualizar
 button.refresh.tooltip  =Actualizar los datos de progreso
-lesson.presence  =estudiantes en l\u00ednea
-sequence.help.info  =Haga doble clic en una actividad para obtener m\u00e1s detalles
+lesson.presence  =Estudiantes conectados
+sequence.help.info  =Haga doble clic en una actividad para m\u00e1s detalles
 lesson.learner.url  =URL de lecci\u00f3n:
 button.select  =Seleccionar
 learner.group.select.all  =Seleccionar/Deseleccionar todo
@@ -276,7 +276,7 @@ force.complete.remove.content.yes  =Eliminar el contenido
 force.complete.remove.content.no  =Mantener el contenido
 label.schedule.gate.activity.completion.based  =Esta puerta se basa en el tiempo en el que cada estudiante ha terminado la actividad anterior.
 audit.force.complete  =Intent\u00f3 mover el usuario {0} para ActivityID: {1}. LessonId: {2}.
-audit.force.complete.end.lesson  =Intent\u00f3 mover el usuario {0} hasta el final de la lecci\u00f3n. LessonId: {2}.
+audit.force.complete.end.lesson  =Intent\u00f3 mover el estudiante {0} hasta el final de la lecci\u00f3n. LessonId: {2}.
 lesson.task.content.edited  =El contenido est\u00e1 editando
 lesson.task.attention  =Esta actividad requiere atenci\u00f3n
 lesson.task.define.later  =Definir m\u00e1s tarde
@@ -306,12 +306,12 @@ index.emailnotifications  =Comunicaciones
 label.email  =Email
 lesson.chart.not.completed  =Sin finalizar
 tour.intro.title  =Tutorial de Seguimiento
-tour.intro.content  =Este breve recorrido le mostrar\u00e1 las caracter\u00edsticas de la interfaz de seguimiento de LAMS. Puede detener el recorrido en cualquier momento haciendo clic en Finalizar recorrido y reiniciarlo nuevamente haciendo clic en el bot\u00f3n Tutorial.
-tour.end.title  =Finalizar tutorial
+tour.intro.content  =Este breve recorrido le mostrar\u00e1 las caracter\u00edsticas de la interfaz de seguimiento de LAMS. Puede detener el recorrido en cualquier momento haciendo clic en Finalizar y reiniciarlo nuevamente haciendo clic en el bot\u00f3n Tutorial.
+tour.end.title  =Finalizar
 tour.end.content.1  =Gracias por tomar el tutorial. Para reiniciar la visita, haga clic en el bot\u00f3n Tutorial de nuevo.
 tour.end.content.2  =Para obtener m\u00e1s ayuda, haga clic en el bot\u00f3n M\u00e1s a continuaci\u00f3n.
 tour.tab.selection.title  =Pesta\u00f1a seleccionar
-tour.tab.selection.content.1  =El monitoreo se divide en tres \u00e1reas, a las que se accede mediante estos t\u00edtulos en la parte superior de la p\u00e1gina.
+tour.tab.selection.content.1  =La interfaz de seguimiento se divide en tres \u00e1reas, a las que se accede mediante estos t\u00edtulos en la parte superior de la p\u00e1gina.
 tour.tab.selection.content.2  =<b>Lecci\u00f3n</b> proporciona los detalles generales de la leccio\u00f3n
 tour.tab.selection.content.3  =<b>Sequencia</b> proporciona una descripci\u00f3n general de la secuencia de la lecci\u00f3n y se usa para acceder a las actividades dentro de la lecci\u00f3n.
 tour.tab.selection.content.4  =<b>Estudiantes</b> muestran los detalles de progreso de cada estudiante.
@@ -322,12 +322,12 @@ tour.lesson.state.content.3  =Las lecciones <b>suspendidas o deshabilitadas</b> 
 tour.lesson.state.content.4  =Las lecciones <b>archivadas</b> no aparecen no son visibles para los estudiantes pero si para los tutores.
 tour.lesson.state.content.5  =Las lecciones <b>eliminadas</b> son borradas totalmente y no pueden ser accedidas.
 tour.lesson.count.learners.content.1  =Esta \u00e1rea muestra la cantidad de estudiantes que han comenzado la lecci\u00f3n y el n\u00famero total inscripto.
-tour.lesson.count.learners.content.2  =Tenga en cuenta que esto NO indica el n\u00famero de estudiantes en l\u00ednea en este momento, sino cu\u00e1ntos estudiantes se han unido a la lecci\u00f3n desde que se inici\u00f3.
+tour.lesson.count.learners.content.2  =Tenga en cuenta que esto NO indica el n\u00famero de estudiantes conectados en este momento, sino cu\u00e1ntos estudiantes se han unido a la lecci\u00f3n desde que se inici\u00f3.
 tour.learner.in.class.content  =Muestra a los estudiantes en la clase. De esta lista, puede enviar un correo electr\u00f3nico a un estudiante en particular.
 tour.edit.class.content  =Agregar o eliminar estudiantes de la lecci\u00f3n.
 tour.email.notifications.content  =Enviar una notificaci\u00f3n por correo electr\u00f3nico a uno o m\u00e1s estudiantes. Las notificaciones se pueden programar para enviar en una fecha m\u00e1s adelante.
-tour.lesson.im.content.1  =Haga clic en <b>Presencia</b> para permitir que los alumnos vean qui\u00e9n est\u00e1 actualmente en l\u00ednea.
-tour.lesson.im.content.2  =Una vez que la opci\u00f3n de  Presencia est\u00e1 activada, la cantidad de estudiantes en l\u00ednea se muestra en el bot\u00f3n Presencia. Haga clic en <b>Mensajer\u00eda instant\u00e1nea</b> para permitir que los estudiantes se env\u00eden mensajes entre ellos.
+tour.lesson.im.content.1  =Haga clic en <b>Estudiantes conectados</b> para visualizar quienes est\u00e1n actualmente conectado a esta lecci\u00f3n.
+tour.lesson.im.content.2  =Una vez que la opci\u00f3n de Estudiantes conectados est\u00e1 activada, la cantidad de estudiantes en l\u00ednea se muestra en el bot\u00f3n Presencia. Haga clic en <b>Mensajer\u00eda instant\u00e1nea</b> para permitir que los estudiantes se env\u00eden mensajes entre ellos.
 tour.lesson.im.content.3  =Haga clic en Presencia y Mensajer\u00eda instant\u00e1nea de nuevo para deshabilitar opci\u00f3n.
 tour.lesson.im.content.4  =Vea los mensajes de los estudiantes usando <b>Mensajer\u00eda instant\u00e1nea</b>.
 tour.completion.chart.content  =El gr\u00e1fico muestra la proporci\u00f3n de estudiantes que no han comenzado la lecci\u00f3n, los que est\u00e1n en progreso o han completado la lecci\u00f3n. Despl\u00e1cese sobre las secciones de gr\u00e1fico para ver los porcentajes.
@@ -342,7 +342,7 @@ tour.completed.learners.content  =Los estudiantes finalizados aparecen en la par
 tour.learner.search.title  =Buscar estudiante
 tour.learner.search.content  =Ingrese un nombre, apellido o nombre de usuario para buscar un alumno.
 tour.live.edit.title  =Edici\u00f3n en vivo
-tour.live.edit.content  =Cambia la secuencia de la lecci\u00f3n. Solo puede cambiar las partes a las que a\u00fan no acceden los alumnos, como agregar nuevas actividades m\u00e1s adelante en la secuencia.
+tour.live.edit.content  =Cambia la secuencia de la lecci\u00f3n. Solo puede cambiar las partes a las que a\u00fan no acceden los estudiantes, como agregar nuevas actividades m\u00e1s adelante en la secuencia.
 tour.tab.learners.content  =<b>Estudiantes</b> muestra el desglose de progreso por cada estudiante.
 tour.learners.progress.content.1  =Los c\u00edrculos azules indican actividades que el estudiante ya ha completado.
 tour.learners.progress.content.2  =Los cuadrados rojos indican la posici\u00f3n actual del estudiante en la secuencia.
@@ -352,8 +352,8 @@ tour.completion.sorting.content  =Active para ordenar en funci\u00f3n del finali
 tour.journal.entries.content  =Ver las entradas en el diario del estudiante.
 tour.email.content  =Enviar email a estudiante en particular
 tour.this.is.disabled  =Esta funci\u00f3n no est\u00e1 disponible durante el tutorial
-tour.prev  =Anterior
-tour.next  =Siguiente
+tour.prev  =Ant
+tour.next  =Sig
 tour.more.help  =M\u00e1s
 tour.end.tour  =Finalizar tutorial
 label.tour  =Tutorial
@@ -373,7 +373,7 @@ tour.gradebook.show.marks.chart.content  =Muestra / oculta un gr\u00e1fico.
 tour.gradebook.show.dates  =Mostrar fechas
 tour.gradebook.show.dates.content  =Mostrar/Esconder las columnas de fechas.
 tour.gradebook.marks.chart  =Gr\u00e1fico
-tour.histogram.help.content  =Haga clic en una barra en el gr\u00e1fico y luego use la rueda del mouse para acercar y alejar el gr\u00e1fico. Una vez que se acerca, la selecci\u00f3n gris en el gr\u00e1fico inferior se puede arrastrar hacia la izquierda o hacia la derecha para mostrar un conjunto diferente de marcas.
+tour.histogram.help.content  =Haga clic en una barra en el gr\u00e1fico y luego use la rueda del mouse para acercar y alejar el gr\u00e1fico. Una vez que se acerca, la selecci\u00f3n gris en el gr\u00e1fico inferior se puede arrastrar hacia la izquierda o hacia la derecha para mostrar un conjunto diferente de puntajes.
 lesson.progress.email  =Enviar informe via correo electr\u00f3nico
 progress.email.send  =Enviar ahora
 progress.email.configure  =Programar informes
@@ -434,7 +434,7 @@ label.sequence  =Secuencia
 label.sequence.diagram  =Dise\u00f1o
 label.refresh  =Actualizar
 label.attendance  =Asistencia
-label.users.knocking.on.gate  ={0} usuarios en la puerta...
+label.users.knocking.on.gate  ={0} estudiantes en la puerta...
 label.comparison  =Comparaci\u00f3n
 label.change.leader  =Cambiar l\u00edder
 label.bar.chart  =Gr\u00e1fico de barras
@@ -451,8 +451,8 @@ email.notifications.archived.export.button  =Exportar
 email.notifications.archived.export.sheet.name  =Notificaci\u00f3n
 email.notifications.message.header  =Mensaje:
 email.notifications.scheduled.messages.button  =Programado
-email.notifications.archived.messages.button  =Archivado
-email.notifications.archived.messages.list  =Lista de emails archivados
+email.notifications.archived.messages.button  =Enviados
+email.notifications.archived.messages.list  =Lista de emails ya enviados
 email.notifications.archived.messages.list.sent.date  =Enviado en
 email.notifications.archived.messages.list.sent.count  =Enviado a
 email.notifications.archived.messages.list.learners  =Estudiantes
