--- a/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:07:11 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:51:10 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -93,7 +93,7 @@ label.authoring.advance.attempts.allowed  =Intentos permitidos
 label.authoring.advance.unlimited  =Ilimitado
 label.authoring.advance.allow.students.question.feedback  =Permitir a los estudiantes ver la retroalimentaci\u00f3n de la pregunta despu\u00e9s de responder a la misma
 label.authoring.advance.allow.students.right.wrong.answers  =Permitir a los estudiantes a ver respuestas correctas e incorrectas
-label.authoring.advance.allow.students.grades  =Permitir a los estudiantes a ver la nota al final de cada intento
+label.authoring.advance.allow.students.grades  =Permitir a los estudiantes a ver el puntaje al final de cada intento
 label.authoring.advance.allow.students.history.responses  =Permitir a los estudiantes a ver la historia de las respuestas al final de cada intento
 label.authoring.advance.overall.feedback  =Retroalimentaci\u00f3n general
 label.authoring.advance.grade.boundary  =L\u00edmite de calificaci\u00f3n
@@ -175,17 +175,17 @@ label.monitoring.question.summary.penalty  =Factor de penalizaci\u00f3n
 label.monitoring.question.summary.average.mark  =Puntaje promedio
 label.monitoring.question.summary.group  =Grupo:
 label.monitoring.question.summary.ok  =Ok
-output.desc.learner.total.score  =El puntaje total del estudiante
+output.desc.learner.total.score  =Puntaje total
 output.desc.learner.time.taken  =Tiempo invertido
-output.desc.learner.number.of.attempts  =N\u00famero de intentos realizados por el estudiante
-output.user.score.for.question  =Puntaje del estudiante para la pregunta:
+output.desc.learner.number.of.attempts  =N\u00famero de intentos
+output.user.score.for.question  =Puntaje de la pregunta:
 error.form.validation.error  =Tiene 1 error en un formulario. Se ha puesto de relieve
 error.form.validation.errors  =Tiene {0} errores en un formulario. Se han puesto de relieve
 error.form.validation.hundred.score  =Una de las respuestas debe tener una calificaci\u00f3n del 100% por lo que es posible obtener la m\u00e1xima calificaci\u00f3n para esta pregunta.
 error.form.validation.positive.accepted.errors  =Todos los errores aceptados deber\u00edan ser positivos.
 message.monitoring.summary.no.session  =No hay sesi\u00f3n disponible
 label.cancel  =Cancelar
-define.later.message  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+define.later.message  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 button.try.again  =Int\u00e9ntelo de nuevo
 activity.title  =Examen
 label.authoring.save.button  =Guardar
@@ -196,10 +196,10 @@ label.finish  =Finalizar
 label.on  =S\u00ed
 label.off  =No
 monitor.summary.th.advancedSettings  =Configuraci\u00f3n avanzada
-label.authoring.advanced.notify.on.attempt.completion  =Notificar al profesor/tutor cuando el estudiante finaliza un intento.
+label.authoring.advanced.notify.on.attempt.completion  =Notificar al instructor/tutor cuando el estudiante finaliza un intento.
 event.learner.completes.attempt.subject  =LAMS: Estudiante termin\u00f3 un intento del examen
 event.learner.completes.attempt.body  =El estudiante {0} ha finalizado un intento del examen. Este mensaje se env\u00eda de forma autom\u00e1tica, a ra\u00edz de la configuraci\u00f3n.
-message.alertContentEdit  =Nota: Uno o m\u00e1s estudiantes han accedido a esta actividad y ya no se puede cambiar.
+message.alertContentEdit  =Atenci\u00f3n: Uno o m\u00e1s estudiantes han accedido a esta actividad y ya no se puede cambiar.
 warning.msg.authoring.do.you.want.to.delete  =\u00bfEst\u00e1s seguro que quieres eliminar esta pregunta?
 label.export.exported.on  =Exportado:
 label.export.question.summary  =Resumen de pregunta
@@ -208,9 +208,9 @@ label.export.date.attempted  =Fecha de intento
 label.export.mark  =Puntaje
 label.export.time.taken  =Tiempo invertido en la actividad desde el inicio (segundos)
 label.export.average  =Promedio
-label.export.summary.by.user  =Resumen por usuario
+label.export.summary.by.user  =Resumen por estudiante
 lable.export.summary.by.question  =Resumen por pregunta
-label.export.user.id  =ID del usuario
+label.export.user.id  =Nombre de usuario
 label.authoring.basic.allow.learners.rich.editor  =Permitir a los estudiantes usar el editor de texto HTML
 label.authoring.advance.allow.students.right.answers  =Permitir a los estudiantes ver las respuestas correctas
 label.authoring.advance.allow.students.wrong.answers  =Permitir a los estudiantes ver las respuestas incorrectas
@@ -226,7 +226,7 @@ monitor.summary.date.restriction.removed  =Restricci\u00f3n de fecha desactivada
 label.authoring.advance.passing.mark  =Puntaje requerido para continuar
 label.authoring.advance.choose.restriction  =Seleccionar restricci\u00f3n:
 label.authoring.advance.passing.mark.none  =Ninguna
-label.learning.havent.reached.passing.mark  =No ha alcanzado la nota para pasar esta actividad que es {0}. Int\u00e9ntelo nuevamente.
+label.learning.havent.reached.passing.mark  =No ha alcanzado el puntaje para pasar esta actividad que es {0}. Int\u00e9ntelo nuevamente.
 label.authoring.basic.add.question.to.pool  =A\u00f1adir pregunta a la banco
 label.authoring.basic.add.question.to.list  =Agregar a la lista de preguntas
 label.authoring.basic.question.bank.title  =Banco de preguntas
@@ -247,7 +247,7 @@ label.authoring.basic.export.questions  =Exportar preguntas
 label.authoring.advance.display.summary  =Mostrar todas las preguntas y respuestas una vez que los estudiantes hayan terminado.
 label.authoring.basic.import.qti  =Importaci\u00f3n IMS QTI
 advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
-monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al final la evaluaci\u00f3n
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.export.reflection  =Reflexiones
 label.continue  =Continuar
@@ -255,8 +255,8 @@ label.edit  =Editar
 label.submit  =Finalizar
 label.authoring.advance.numbered.questions  =Habilitar numeraci\u00f3n de preguntas
 label.learning.draft.autosaved  =Borrador se ha auto-guardado
-label.waiting.for.leader  =Por favor, espere mientras alguien se elige como l\u00edder de grupo
-label.users.from.group  =Otros usuarios que participan en el grupo:
+label.waiting.for.leader  =Espere mientras alguien se elige como l\u00edder de grupo
+label.users.from.group  =Otros estudiantes que participan en el grupo:
 label.use.select.leader.tool.output  =Utilice los l\u00edderes de herramienta Seleccionar L\u00edder
 label.group.leader  =L\u00edder del grupo: {0}
 label.refresh  =Actualizar
@@ -273,12 +273,12 @@ label.info.max.and.min.number.words  =Esta respuesta debe tener un m\u00ednimo d
 warn.answers.word.requirements.limit  =Para continuar, por favor, tenga en cuenta las restricciones de l\u00edmite de palabras.
 label.words  =Palabras:
 message.no.reflection.available  =No hay reflexi\u00f3n disponible.
-label.authoring.basic.type.mark.hedging  =Apostar notas
+label.authoring.basic.type.mark.hedging  =Distribuir puntaje (hedging)
 label.option.correct  =Correcta?
 label.assign.hedging.mark  =Asignar puntaje a las respuestas. Max puntaje posible: {0}
 label.learning.submit  =Enviar
 warn.mark.hedging.wrong.total  =Para continuar, todas las preguntas deben tener todos los puntajes disponibles asignados.
-label.incorrect.answer.nullifies.mark  =Asigna calificaci\u00f3n marca s\u00f3lo cuando se seleccionan las respuestas correctas.
+label.incorrect.answer.nullifies.mark  =Asigna puntaje total s\u00f3lo cuando se seleccionan las respuestas correctas.
 label.export.summary  =Resumen
 label.justify.hedging.marks  =Por favor, justifique su asignaci\u00f3n de puntos.
 label.select.leader  =Selecci\u00f3n de l\u00edder
@@ -301,7 +301,7 @@ errors.maxfilesize  =El tama\u00f1o del archivo excede del m\u00e1ximo permitido
 label.summary.downloaded  =Resumen descargado
 label.not.answered  =Sin contestar
 label.other  =Otros
-label.graph.help  =En los gr\u00e1ficos a continuaci\u00f3n, haga clic en una barra en el gr\u00e1fico y luego use la rueda del mouse para acercar y alejar el gr\u00e1fico. Una vez que se acerca, la selecci\u00f3n gris en el gr\u00e1fico inferior se puede arrastrar hacia la izquierda o hacia la derecha para mostrar un conjunto diferente de marcas.
+label.graph.help  =En los gr\u00e1ficos a continuaci\u00f3n, haga clic en una barra en el gr\u00e1fico y luego use la rueda del mouse para acercar y alejar el gr\u00e1fico. Una vez que se acerca, la selecci\u00f3n gris en el gr\u00e1fico inferior se puede arrastrar hacia la izquierda o hacia la derecha para mostrar un conjunto diferente de puntajes.
 label.lowest.mark  =Puntaje m\u00e1s bajo:
 label.highest.mark  =Puntaje m\u00e1s alto:
 label.number.learners  =N\u00famero de estudiantes
