--- a/lams_tool_bbb/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_bbb/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = bbb
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 00:30:29 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:57:38 CST 2018 
  
 #=================== labels for Web conferencing =================# 
 
@@ -14,8 +14,8 @@ activity.helptext  =Video conferencia
 activity.welcome.message  =Bienvenidos a la video conferencia
 pageTitle.authoring  =Creaci\u00f3n de la video conferencia
 pageTitle.monitoring  =Seguimiento video conferencia
-button.basic  =B\u00e1sico
-button.advanced  =Avanzado
+button.basic  =Contenido
+button.advanced  =Configuraci\u00f3n
 button.cancel  =Cancelar
 button.save  =Guardar
 button.finish  =Finalizar
@@ -40,9 +40,9 @@ label.off  =No
 label.monitoring.startConference  =Inicio Conferencia
 label.learning.joinConference  =Unirse a la conferencia
 label.learning.conferenceNotAvailable  =La Video conferencia a\u00fan no est\u00e1 disponible ya que el instructor no la ha comenzado. Por favor, consulte a su instructor para m\u00e1s detalles.
-label.refresh  =Refrescar
+label.refresh  =Actualizar
 label.cancel  =Cancelar
-message.defineLaterSet  =Por favor, espere a que el profesor para completar los contenidos de esta actividad
+message.defineLaterSet  =Por favor, espere a que el instructor para completar los contenidos de esta actividad
 message.learner.blank.input  =No has escrito nada. \u00bfEst\u00e1s seguro de que esto es correcto?
 message.alertContentEdit  =Advertencia: uno o m\u00e1s estudiantes ha accedido a esta actividad. El cambio de este contenido puede producir confusi\u00f3n en estudiantes que reciben una informaci\u00f3n diferente.
 message.warnLockOnFinish  =Nota: Despu\u00e9s de hacer clic en "Finalizar", usted no ser\u00e1 capaz de seguir participando.
@@ -56,8 +56,8 @@ heading.learner  =Estudiantes
 heading.notebookEntry  =Reflexi\u00f3n
 error.mandatoryField  ={0} campo es obligatorio.
 error.optionalField  ={0} ha dejado en blanco.
-advanced.lockOnFinished  =No permitir modificaciones una vez terminado
-advanced.reflectOnActivity  =A\u00f1adir anotaciones al finalizar la video conferencia con las siguientes instrucciones
+advanced.lockOnFinished  =No permitir modificaciones una vez finalizada la actividad.
+advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 authoring.msg.cancel.save  =\u00bfQuieres cerrar la ventana sin guardar los cambios?
 monitor.summary.th.advancedSettings  =Configuraci\u00f3n avanzada
 monitor.summary.bbbSettings  =Configuraci\u00f3n de la video conferencia
@@ -66,9 +66,9 @@ config.serverURL  =Direcci\u00f3n URL del servidor Big Blue Button
 config.securitySalt.notice  =Tenga en cuenta que "security salt" es fundamental. Esta security salt es una palabra clave que se utiliza para asegurar que las salas de conferencias web s\u00f3lo puede ser creado a partir de este sitio web.
 config.securitySalt.notice2  =IMPORTANTE: NO PERMITA QUE LOS USUARIOS FINALES CONOZCAN SU SECURITY SALT O BIEN SU SEGURIDAD SE VERA COMPROMETIDA. V\u00e9ase el sitio web para m\u00e1s detalles BigBlueButton
 config.securitySalt  =Security Salt
-message.unableToStartLesson  =No se puede participar en la conferencia. Por favor, consulte con su profesor.
+message.unableToStartLesson  =No se puede participar en la conferencia. Por favor, consulte con su instructor.
 button.submit  =Finalizar
-message.monitoring.summary.no.session  =No hay sesiones disponibles
+message.monitoring.summary.no.session  =Sin informaci\u00f3n disponible.
 label.activity.completion  =Al finalizar actividad
 
 
