--- a/lams_tool_chat/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_chat/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = chat
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:03:04 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:52:41 CST 2018 
  
 #=================== labels for Chat =================# 
 
@@ -17,18 +17,16 @@ button.advanced  =Configuraci\u00f3n
 label.authoring.basic.title  =T\u00edtulo:
 label.authoring.basic.content  =Contenido:
 label.authoring.basic.instructions  =Instrucciones
-advanced.lockOnFinished  =No permitir modificaciones una vez terminado
+advanced.lockOnFinished  =No permitir modificaciones una vez finalizada la actividad.
 advanced.filteringEnabled  =Palabras a filtrar (separe cada palabra con una coma. ej: palabra1, palabra2, etc)
-instructions.type.online  =Online
-instructions.type.offline  =Offline
 label.filename  =Nombre de Archivo
 label.type  =Tipo
 link.view  =Ver
 link.delete  =Borrar
 message.updateSuccess  =Salvar cambios
 pageTitle.learning  =Conversaci\u00f3n Sincr\u00f3nica
-message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
-pageTitle.monitoring  =Monitoreo de Chat
+message.defineLaterSet  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
+pageTitle.monitoring  =Seguimiento de Chat
 button.summary  =Resumen
 button.editActivity  =Editar Actividad
 button.statistics  =Estad\u00edsticas
@@ -63,7 +61,7 @@ label.cancel  =Cancelar
 error.missingParam  =No se puede continuar. Falta {0}.
 authoring.msg.cancel.save  =\u00bfDesea cerrar sin salvar sus cambios?
 pageTitle.monitoring.chatHistory  =Historial de Chat
-button.try.again  =Refrescar
+button.try.again  =Actualizar
 advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 button.reflect  =\u00bfReflexionar en Chat?
 button.continue  =Continuar
@@ -79,7 +77,7 @@ message.activityLocked  =El instructor ha configurado este Chat para que una vez
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
 label.on  =Si
 label.off  =No
-monitor.summary.td.addNotebook  =Agregar notas al terminar el Chat
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 monitor.summary.td.filteredWords  =Palabras a filtrar
 button.conditions  =Condiciones
@@ -121,4 +119,4 @@ label.notifications  =Notifications
 output.desc.learner.number.of.posts  =Mensajes
 
 
-#======= End labels: Exported 113 labels for es ES =====
+#======= End labels: Exported 111 labels for es ES =====
