--- a/lams_tool_daco/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_daco/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = daco
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:27:30 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:49:48 CST 2018 
  
 #=================== labels for Data Collection =================# 
 
@@ -174,7 +174,6 @@ label.monitoring.edit.activity.edit  =Edit
 label.monitoring.user.fullname  =Name
 label.monitoring.heading.access  =Learners list
 label.monitoring.reflection.heading  =Notebook entries
-message.monitoring.edit.activity.not.editable  =This Activity is no longer editable
 message.monitoring.summary.no.session  =No learners have accessed this activity.
 message.monitoring.summary.no.question.for.group  =No question available for this group.
 label.export.title  =Export portfolio of Data Collection
@@ -234,7 +233,7 @@ event.learnerentry.subject  =LAMS: A learner entered a data collection tool
 event.learnerentry.body  =The learner {0} entered a data collection tool.\n\nThis message was send automatically, following tool''s advanced settings.
 event.recordsubmit.subject  =LAMS: A learner submitted a record in a data collection tool
 event.recordsubmit.body  =The learner {0} submitted a record in a data collection tool.\n\nThis message was send automatically, following tool''s advanced settings.
-output.desc.learner.number.of.posts  =Learner's number of records
+output.desc.learner.number.of.posts  =Number of records added
 message.authoring.delete.question  =Are you sure you want to delete this question?
 title.export.spreadsheet  =Export to file
 label.export.spreadsheet.instruction  =Please choose format which you want to export
@@ -258,4 +257,4 @@ error.attachment.must.be.image  =Allowed file formats: JPG, GIF or PNG.
 label.upload.info  =Uploaded file must not be executable and not exceed size of {0}
 
 
-#======= End labels: Exported 250 labels for en AU =====
+#======= End labels: Exported 249 labels for en AU =====
