--- a/lams_tool_daco/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_daco/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = daco
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:05:10 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:49:47 CST 2018 
  
 #=================== labels for Data Collection =================# 
 
@@ -18,7 +18,7 @@ label.common.summary.none  =Ninguno
 label.common.summary.sum  =Suma
 label.common.summary.average  =Promedio
 label.common.summary.count  =Total
-label.common.summary.refresh  =Refrescar
+label.common.summary.refresh  =Actualizar
 label.common.heading  =Recolecci\u00f3n de datos
 label.common.view  =Ver
 label.common.cancel  =Cancelar
@@ -29,7 +29,7 @@ label.common.max  =M\u00e1ximo
 label.common.view.change  =Ver cambio
 button.try.again  =Reintentar
 message.no.reflection.available  =No hay anotaciones
-define.later.message  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+define.later.message  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 label.author.title  =Recolecci\u00f3n de datos Edici\u00f3n
 label.authoring.heading.advanced  =Configuraci\u00f3n
 label.authoring.heading.advanced.description  =Ingrese opciones avanzadas para recolecci\u00f3n de datos
@@ -89,7 +89,7 @@ label.authoring.basic.additionaloptions.hide  =Minimizar opciones adicionales
 label.authoring.advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 label.authoring.advanced.record  =Limitar n\u00famero de registros a ingresar
 label.authoring.advanced.record.nolimit  =Sin limite
-label.authoring.advanced.lock.on.finished  =No permitir modificaciones una vez terminado
+label.authoring.advanced.lock.on.finished  =No permitir modificaciones una vez finalizada la actividad.
 label.authoring.advanced.notify.onlearnerentry  =Notificar a los tutores cuando el estudiante ingresa a la actividad
 label.authoring.advanced.notify.onrecordsubmit  =Notificar a los tutores cuando el estudiante agrega un registro.
 label.authoring.save.button  =Guardar
@@ -139,7 +139,7 @@ message.learning.alertContentEdit  =La modificaci\u00f3n del contenido no se pue
 message.learning.warnLockOnFinish  =Atenci\u00f3n: una vez finalizada esta actividad no podr\u00e1 hacer cambios.
 message.learning.addrecordsuccess  =El registro ha sido a\u00f1adido.
 message.learning.editrecordsuccess  =El registro se ha actualizado.
-message.learning.activityLocked  =El profesor ha configurado esta actividad de manera que no permita m\u00e1s respuestas una vez finalizada la actividad.
+message.learning.activityLocked  =El instructor ha configurado esta actividad de manera que no permita m\u00e1s respuestas una vez finalizada la actividad.
 label.monitoring.close  =Cerrar
 title.monitoring  =Colecci\u00f3n de Datos Seguimiento
 title.monitoring.recordlist  =Lista de registros
@@ -156,7 +156,7 @@ label.monitoring.viewrecords.all  =Ver todos los registros
 label.monitoring.advancedsettings  =Opciones Avanzadas
 label.monitoring.advancedsettings.on  =Si
 label.monitoring.advancedsettings.off  =No
-label.monitoring.advancedsettings.addNotebook  =Agregar anotaci\u00f3n al final de la actividad.
+label.monitoring.advancedsettings.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 label.monitoring.advancedsettings.notebookinstructions  =Instrucciones de la reflexi\u00f3n
 label.monitoring.group  =Grupo
 label.monitoring.type  =Tipo
@@ -233,7 +233,7 @@ event.learnerentry.subject  =LAMS: Un estudiante ha entrado a la actividad de Co
 event.learnerentry.body  =El estudiante {0} ha entrado a la actividad de Colecci\u00f3n de Datos.\n\nEste mensaje ha sido enviado automaticamente siguiendo la configuraci\u00f3n de la actividad.
 event.recordsubmit.subject  =LAMS: Un estudiante ha agregado un registro a la actividad Colecci\u00f3n de Datos
 event.recordsubmit.body  =El estudiante {0} ha ingresado un registro en Colecci\u00f3n de Datos.\n\nEste mensaje ha sido enviado automaticamente.
-output.desc.learner.number.of.posts  =N\u00famero de registros de estudiantes
+output.desc.learner.number.of.posts  =N\u00famero de registros a\u00f1adidos
 message.authoring.delete.question  =\u00bfEsta seguro que quiere borrar?
 title.export.spreadsheet  =Exportar a archivo
 label.export.spreadsheet.instruction  =Por favor, elija el formato que desea exportar
