--- a/lams_tool_gmap/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_gmap/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = gmap
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:05:32 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:54:51 CST 2018 
  
 #=================== labels for Google Maps =================# 
 
@@ -33,7 +33,7 @@ button.edit  =Editar
 button.remove  =Borrar
 label.learner.markerLimitReached  =Ya no se pueden agregar puntos, se ha alcanzado el m\u00e1ximo.
 advanced.editingOptions  =Editar opciones
-advanced.lockOnFinished  =No permitir modificaciones una vez terminado
+advanced.lockOnFinished  =No permitir modificaciones una vez finalizada la actividad.
 advanced.allowEditMarkers  =Permitir a los estudiantes editar sus propios puntos
 advanced.allowShowAllMarkers  =Permitir a los estudiantes ver los puntos de otros
 advanced.limitMarkers  =Limites para puntos
@@ -52,7 +52,7 @@ label.legend.saved  =Guardado:
 label.legend.edited  =Editado:
 label.legend.userSelected  =Seleccionado:
 link.view  =Ver
-message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+message.defineLaterSet  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 pageTitle.monitoring  =Mapas Seguimiento
 button.summary  =Resumen
 button.editActivity  =Editar Actividad
@@ -86,12 +86,12 @@ error.gmapKeyMissing  =Esta actividad no se haya configurada. Necesita el Google
 label.on  =Si
 label.off  =No
 label.unsavedMarkers  =Atenci\u00f3n: usted tiene uno o m\u00e1s puntos sin t\u00edtulo, si desea continuar estos puntos no ser\u00e1n guardados. \u00bfEsta seguro de continuar?
-button.refresh  =Refrescar Mapa
+button.refresh  =Actualizar mapa
 button.Continue  =Continuar
 heading.reflection  =Reflexi\u00f3n
 pageTitle.monitoring.notebook  =Ver reflexiones
 message.no.reflection.available  =Sin anotaciones
-monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al final de esta actividad.
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones para la reflexion
 pageTitle.admin  =Configuracion de Mapas
 admin.formError  =Faltan algunas entradas. Por favor, asegurese que todos los campos necesarios tengan entradas.
