--- a/lams_tool_images/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = images
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:06:36 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:50:32 CST 2018 
  
 #=================== labels for Image Gallery =================# 
 
@@ -71,9 +71,9 @@ label.monitoring.imagesummary.comments  =Comentarios
 label.monitoring.imagesummary.voted.for.this.image  =Favoritos
 label.monitoring.imagesummary.image  =Im\u00e1gen
 label.monitoring.updatecomment.save  =Guardar
-output.desc.learner.number.of.images.uploaded  =N\u00famero de imagenes subidas por usuario
-output.desc.learner.number.of.comments  =N\u00famero de comentarios por usuario
-output.desc.learner.number.of.votes  =N\u00famero de imagenes seleccionadas como favoritas por usuario
+output.desc.learner.number.of.images.uploaded  =N\u00famero de im\u00e1genes subidas
+output.desc.learner.number.of.comments  =N\u00famero de comentarios
+output.desc.learner.number.of.votes  =N\u00famero de im\u00e1genes seleccionadas como favoritas
 error.resource.image.not.alowed.format  =Los formatos permitidos son: gif, png, jpg
 error.resource.image.not.alowed.format.for  =Error al subir im\u00e1gen {0}. Los formatos permitidos son: gif, png, jpg
 error.resource.item.file.blank  =Archivo no se puede dejar en blanco.
@@ -95,7 +95,7 @@ message.monitoring.summary.no.session  =No hay sessiones disponibles.
 label.show  =Mostrar
 label.hide  =Esconder
 label.cancel  =Cancelar
-define.later.message  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+define.later.message  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 message.monitoring.summary.no.resource.for.group  =No hay imagenes disponibles en este grupo
 button.try.again  =Intentar nuevamente
 page.title.monitoring.view.reflection  =Ver Reflexiones
@@ -104,7 +104,7 @@ title.reflection  =Reflexi\u00f3n
 monitoring.user.reflection  =Reflexi\u00f3n
 activity.title  =Galer\u00eda de Im\u00e1genes
 label.authoring.save.button  =Guardar
-label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
+label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez finalizada la actividad.
 label.authoring.heading.advance  =Configuraci\u00f3n
 label.continue  =Continuar
 monitoring.user.fullname  =Nombre
@@ -118,7 +118,7 @@ message.warnLockOnFinish  =Atenci\u00f3n: una vez finalizada esta actividad no p
 label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Otras opciones
-monitor.summary.td.addNotebook  =Agregar reflexi\u00f3n al final de actividada
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 admin.page.title  =Configuraci\u00f3n de Galer\u00eda de Im\u00e1genes
 error.required.fields.missing  =Hay valores faltantes. Por favor, asegurese que todos los campos han sido ingresados.
