--- a/lams_tool_imscc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_imscc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = imscc
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:08:19 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:57:54 CST 2018 
  
 #=================== labels for IMS Common Cartridge =================# 
 
@@ -38,7 +38,7 @@ button.close  =Cerrar
 button.edit  =Editar
 button.try.again  =Int\u00e9ntelo de nuevo
 button.upload  =Subir
-define.later.message  =Por favor, espere a que el profesor para completar los contenidos de esta actividad.
+define.later.message  =Por favor, espere a que el instructor para completar los contenidos de esta actividad.
 error.msg.default.content.not.find  =No se pudo recuperar el contenido por defecto para esta herramienta.
 error.msg.file.not.found  =Excepci\u00f3n de archivo no encontrado se produce cuando la carga de archivos.
 error.msg.io.exception  =IOException se produce cuando la carga de archivos.
@@ -53,7 +53,7 @@ error.resource.item.title.blank  =El t\u00edtulo no puede estar en blanco.
 error.resource.item.url.blank  =La URL no puede estar en blanco.
 error.upload.failed  =Subir archivo error: {0}
 label.authoring.advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
-label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
+label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez finalizada la actividad.
 label.authoring.advance.mini.number.resources.view  =N\u00famero m\u00ednimo de recursos para ver
 label.authoring.advance.run.content.auto  =Ejecutar el contenido de forma autom\u00e1tica (s\u00f3lo est\u00e1 disponible si hay exactamente un recurso)
 label.authoring.basic.add.file  =A\u00f1adir Common Cartridge
@@ -104,7 +104,7 @@ message.alertContentEdit  =Advertencia: Una de las m\u00e1s estudiantes ha acced
 message.monitoring.summary.no.resource.for.group  =No hay recursos disponible para este grupo.
 message.monitoring.summary.no.session  =Ninguna sesi\u00f3n disponible
 message.no.reflection.available  =No ha reflexiones disponibles
-message.warnLockOnFinish  =Nota: Despu\u00e9s de hacer clic en Finalizar, al volver a esta actividad no podra participar.
+message.warnLockOnFinish  =Atenci\u00f3n: Despu\u00e9s de hacer clic en Finalizar, al volver a esta actividad no podra participar.
 monitoring.label.access.time  =Tiempo de acceso
 monitoring.label.group  =Grupo
 monitoring.label.hide  =Ocultar
@@ -118,7 +118,7 @@ monitoring.tab.statistics  =Estad\u00edsticas
 monitoring.tab.summary  =Resumen
 monitoring.user.fullname  =Nombre
 monitoring.user.reflection  =Reflexi\u00f3n
-monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al final de esta actividad.
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 monitor.summary.th.advancedSettings  =Configuraci\u00f3n avanzada
 open.in.new.window  =Abrir URL en un pop-up
