--- a/lams_tool_lamc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:01:45 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:46:02 CST 2018 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -69,11 +69,11 @@ label.answers  =Respuestas
 button.endLearning  =Finalizar
 label.learning.attemptTime  =Intentos fecha/tiempo
 label.learning.response  =Respuesta
-label.user  =Usuario
+label.user  =Estudiante
 label.attemptTime  =Intentos fecha/tiempo
 label.response  =Respuesta
-label.learning.forceOfflineMessage  =Esta actividad ha sido se\u00f1alada para realizarse en forma offline. Por favor, consulte con su profesor.
-error.defineLater  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+label.learning.forceOfflineMessage  =Esta actividad ha sido se\u00f1alada para realizarse en forma offline. Por favor, consulte con su instructor.
+error.defineLater  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 group.label  =Grupo
 button.summary  =Resumen
 button.editActivity  =Revise la actividad
@@ -86,19 +86,19 @@ label.stats.totalAllGroups  =Cuenta total de todos los aprendices
 authoring.msg.cancel.save  =Esta seguro que desea cancelar? Sus cambios no seran guardados
 label.learning.forceFinishMessage  =El instructor ha decidido terminar esta actividad. Por favor termine esta actividad
 label.correct  =Correcta
-label.passingMark  =Marca necesaria para pasar
+label.passingMark  =Puntaje requerido para continuar
 label.mcqSummary  =Resumen
 label.yourAnswers  =Respuestas de los estudiantes:
 label.learner  =Estudiante
-button.try.again  =Refrescar
+button.try.again  =Actualizar
 label.feedback  =Retroacci\u00f3n:
-label.notEnoughMarks  =No tiene suficientes marcas para finalizar esta actividad. Debe re-hacerla nuevamente.
+label.notEnoughMarks  =No tiene suficiente puntaje para finalizar esta actividad. Debe re-hacerla nuevamente.
 label.tip.moveQuestionDown  =Mover pregunta hacia abajo
 label.tip.moveQuestionUp  =Mover pregunta hacia arriba
 label.tip.editOptions  =Permite editar las opciones de respuesta para esta pregunta
 label.tip.removeQuestion  =Remover esta pregunta
 label.tip.removeCandidate  =Remover esta respuesta
-label.studentMarks  =Marcas de los estudiantes
+label.studentMarks  =Puntaje de los estudiantes
 label.authoring.title.col  =T\u00edtulo:
 label.authoring.instructions.col  =Instrucciones:
 label.candidateAnswer  =Opci\u00f3n
@@ -129,18 +129,18 @@ questions.none.submitted  =Debe haber por lo menos una pregunta.
 label.edit.question  =Editar Pregunta
 label.feedback.simple  =Retroacci\u00f3n:
 candidates.duplicate.correct  =Pro favor corrija lo siguiente: S\u00f3lo puede haber una \u00fanica posible respuesta correcta.
-label.group.results  =Nota m\u00e1xima y promedio del grupo
+label.group.results  =Puntaje m\u00e1ximo y promedio del grupo
 candidates.groupSize.warning  =Atenci\u00f3n: debe haber por lo menos dos respuestas posibles
 candidates.unremovable.groupSize  =La respuesta no puede ser removida ya que debe haber por lo menos dos respuestas posibles
 candidates.setFirst  =Note que la primera respuesta ha sido seleccionada por usted
 candidates.blank  =Atenci\u00f3n: la respuesta no puede ser dejada en blanco
-label.showMarks  =Mostrar a estudiantes las marcas mayor y promedio
+label.showMarks  =Mostrar a estudiantes los puntajes mayor y promedio
 label.randomize  =Presentar respuestas en orden aleatorio
 message.no.reflection.available  =No hay anotaciones disponibles
 label.attempt.count  =N\u00famero de intentos:
 label.final.attempt  =\u00daltimo intento:
-output.desc.learner.mark  =Puntos totales del estudiante
-output.desc.learner.all.correct  =El estudiante tiene todas las respuestas correctas
+output.desc.learner.mark  =Puntaje total
+output.desc.learner.all.correct  =Todas las respuestas correctas
 label.displayAnswers  =Mostrar las respuestas despu\u00e9s de la \u00faltima pregunta
 label.monitoring.yesDisplayAnswers  =Los estudiantes pueden ver las respuestas a todas las preguntas.
 label.monitoring.noDisplayAnswers1  =Los estudiantes no pueden ver las respuestas a las preguntas.
@@ -155,7 +155,7 @@ error.monitoring.spreadsheet.download  =Ha ocurrido un error al preparar su plan
 label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
-monitor.summary.td.addNotebook  =Agregar anotador al finalizar Opci\u00f3n M\u00faltiple
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 error.pedagogical.planner.empty.answer.selected  =En pregunta {0} la respuesta correcta no se puede dejar en blanco.
 monitor.summary.date.restriction  =Restricci\u00f3n por fecha
@@ -184,7 +184,7 @@ label.monitoring.summary.user.name  =Nombre
 label.monitoring.summary.total  =Total
 label.monitoring.summary.learner.summary  =Resumen estudiante
 label.monitoring.user.summary.response  =Respuesta
-label.monitoring.user.summary.grade  =Nota
+label.monitoring.user.summary.grade  =Puntaje
 label.waiting.for.leader  =Por favor, espere mientras alguien se elige como l\u00edder de grupo
 label.users.from.group  =Otros usuarios que participan en el grupo:
 label.use.select.leader.tool.output  =Utilice los l\u00edderes de herramienta Seleccionar L\u00edder
@@ -204,7 +204,7 @@ answers.submitted.none  =Seleccione al menos una respuesta para cada una de las 
 label.summary.downloaded  =El archivo de puntajes ha sido descargado.
 label.number.learners  =Estudiantes
 label.number.groups.finished  =N\u00famero de grupos que han finalizado
-label.graph.help  =En los gr\u00e1ficos a continuaci\u00f3n, haga clic en una barra en el gr\u00e1fico y luego use la rueda del mouse para acercar y alejar el gr\u00e1fico. Una vez que se acerca, la selecci\u00f3n gris en el gr\u00e1fico inferior se puede arrastrar hacia la izquierda o hacia la derecha para mostrar un conjunto diferente de marcas.
+label.graph.help  =En los gr\u00e1ficos a continuaci\u00f3n, haga clic en una barra en el gr\u00e1fico y luego use la rueda del mouse para acercar y alejar el gr\u00e1fico. Una vez que se acerca, la selecci\u00f3n gris en el gr\u00e1fico inferior se puede arrastrar hacia la izquierda o hacia la derecha para mostrar un conjunto diferente de puntajes.
 label.lowest.mark  =Puntaje m\u00e1s bajo:
 label.highest.mark  =Puntaje m\u00e1s alto:
 label.number.learners.in.mark.range  =N\u00famero de estudiantes en el rango de puntaje
