--- a/lams_tool_laqa/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Nov 09 20:36:09 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:46:30 CST 2018 
  
 #=================== labels for Q&A =================# 
 
@@ -78,8 +78,8 @@ label.stats.allGroups  =All groups:
 label.stats.totalAllGroups  =Total numer of all learners:
 error.defineLater  =Please wait for the instructor to complete the contents of this activity.
 error.noLearnerActivity  =Summary report is not available since no learners attempted the activity yet.
-count.total.user  =Total users:
-count.finished.user  =Finished users:
+count.total.user  =Total students:
+count.finished.user  =Finished students:
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 label.allResponses  =View all responses
 label.learning.forceFinish  =You are required to finish this activity now.
