--- a/lams_tool_laqa/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_laqa/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = qa
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:02:27 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:46:29 CST 2018 
  
 #=================== labels for Q&A =================# 
 
@@ -10,7 +10,7 @@ activity.title  =Preguntas y Respuestas
 activity.description  =Cada estudiante responde una(s) pregunta(s) y a continuaci\u00f3n se presentan toda las respuestas a esa pregunta de los dem\u00e1s estudiantes
 activity.helptext  =Cada estudiante responde una(s) pregunta(s) y a continuaci\u00f3n se presentan toda las respuestas a esa pregunta de los dem\u00e1s estudiantes
 tool.display.name  =Herramienta de Preguntas y Respuestas
-tool.description  =Herramienta que permite al profesor formular una o m\u00e1s preguntas a los estudiantes
+tool.description  =Herramienta que permite al instructor formular una o m\u00e1s preguntas a los estudiantes
 label.tool.shortname  =Preguntas y Respuestas
 label.authoring  =Creaci\u00f3n de Preguntas
 label.monitoring  =Preguntas y Respuestas Seguimiento
@@ -76,7 +76,7 @@ label.hidden  =Escondidas
 label.stats.totalLearners  =N\u00famero Total de Estudiantes:
 label.stats.allGroups  =Todos los Grupos:
 label.stats.totalAllGroups  =N\u00famero Total de Todos los Estudiantes:
-error.defineLater  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+error.defineLater  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 error.noLearnerActivity  =El Reporte no esta disponible ya que no hay estudiantes
 count.total.user  =N\u00famero total de estudiantes:
 count.finished.user  =N\u00famero total de estudiantes que ha terminado esta actividad:
@@ -86,7 +86,7 @@ label.learning.forceFinish  =Tiene que terminar esta actividad ahora
 label.learning.yourAnswer  =Su respuesta:
 label.show  =Mostrar
 label.response.hidden  =Escondido
-button.try.again  =Refrescar
+button.try.again  =Actualizar
 label.add.question  =A\u00f1adir pregunta
 label.authoring.title.col  =T\u00edtulo:
 label.authoring.instructions.col  =Instrucciones:
@@ -122,14 +122,14 @@ label.feedback.combined  =N\u00famero de preguntas en esta actividad:
 label.questions.simple  =preguntas
 label.questions.remaining  =Preguntas a contestar;
 label.end.questions  =Fin de las preguntas.
-label.lockWhenFinished  =No permitir modificaciones una vez terminado
+label.lockWhenFinished  =No permitir modificaciones una vez finalizada la actividad.
 label.learner.answer  =Mostrar respuestas de otros estudiantes
 label.show.names  =Mostrar el nombre de los estudiantes con su respuesta
 warning.empty.answers  =Una o mas preguntas no han sido contestadas. \u00bfDesea continuar igualmente?
 label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
-monitor.summary.td.addNotebook  =Agregar anotador al finalizar Preguntas
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.conditions  =Condiciones
 label.authoring.conditions.add.condition  =Agregar Condici\u00f3n
@@ -216,7 +216,7 @@ label.learning.answer  =Respuesta
 label.learning.rating  =Calificaci\u00f3n
 button.submit  =Finalizar
 label.waiting.for.leader  =Por favor, espere mientras alguien se elige como l\u00edder de grupo
-label.users.from.group  =Otros usuarios que participan en el grupo:
+label.users.from.group  =Otros estudiantes que participan en el grupo:
 label.use.select.leader.tool.output  =Utilice los l\u00edderes de herramienta Seleccionar L\u00edder
 label.group.leader  =L\u00edder del grupo: {0}
 label.modify.users.response  =Modificar la respuesta del alumno
@@ -224,7 +224,7 @@ label.info.use.select.leader.outputs  =La opci\u00f3n de l\u00edder del Grupo es
 label.votes  =votos
 label.notify.teachers.on.response.submit  =Notificar a los tutores cuando se reciban respuestas
 label.user.has.answered.questions  ={0} ha respondido a la siguiente pregunta (s):
-label.allow.comments  =Permitir a los alumnos comentar sobre las respuestas de otros
+label.allow.comments  =Permitir a los estudiantes comentar sobre las respuestas de otros
 label.comment  =Comentar
 label.comment.textarea.tip  =Comentarios aqu\u00ed ...
 label.rating.criterias  =Criterios de calificaci\u00f3n
