--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = mindmap
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:07:27 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:57:01 CST 2018 
  
 #=================== labels for Mindmap =================# 
 
@@ -17,11 +17,11 @@ button.basic  =Contenido
 button.advanced  =Configuraci\u00f3n
 label.authoring.basic.title  =T\u00edtulo:
 label.authoring.basic.content  =Contenido:
-advanced.reflectOnActivity  =Agregar anotador al finalizar
-advanced.lockOnFinished  =No permitir modificaciones una vez terminado
+advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
+advanced.lockOnFinished  =No permitir modificaciones una vez finalizada la actividad.
 advanced.multiUserMode  =Modo de multiples usuarios
-pageTitle.learning  =Lluvia de ideas online
-message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+pageTitle.learning  =Mapa de ideas
+message.defineLaterSet  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 pageTitle.monitoring  =Lluvia de ideas seguimiento
 button.summary  =Resumen
 button.editActivity  =Editar actividad
@@ -73,7 +73,7 @@ output.desc.number.of.nodes  =N\u00famero de ideas
 node.root.defaultName  =Idea principal
 node.child1.defaultName  =Sub idea 1
 node.child2.defaultName  =Sub idea 2
-node.instructor.label  =Profesor
+node.instructor.label  =Instructor
 node.learner.label  =Estudiante
 local.title  =Texto
 local.delete_question  =\u00bfEst\u00e1 seguro de que desea eliminar?
