--- a/lams_tool_notebook/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_notebook/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = notebook
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:03:38 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:53:19 CST 2018 
  
 #=================== labels for Notebook =================# 
 
@@ -14,18 +14,18 @@ activity.helptext  =Anotador para notas y reflexiones
 pageTitle.authoring  =Crear Anotador
 button.basic  =Contenido
 button.advanced  =Configuraci\u00f3n
-label.authoring.basic.title  =T\u00edtulo
+label.authoring.basic.title  =T\u00edtulo:
 label.authoring.basic.content  =Contenido:
 label.authoring.basic.instructions  =Instrucciones:
-advanced.lockOnFinished  =No permitir modificaciones una vez terminado
+advanced.lockOnFinished  =No permitir modificaciones una vez finalizada la actividad.
 advanced.allowRichEditor  =Usar Editor HTML
 label.filename  =Archivo
 label.type  =Tipo
 message.updateSuccess  =Guardar cambios
 message.unsavedChanges  =La p\u00e1gina contiene cambios sin salvar
 pageTitle.learning  =Anotador
-message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
-pageTitle.monitoring  =Monitoreo de Anotador
+message.defineLaterSet  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
+pageTitle.monitoring  =Seguimiento de Anotador
 button.summary  =Resumen
 button.editActivity  =Editar Actividad
 button.statistics  =Estad\u00edsticas
@@ -105,7 +105,7 @@ monitor.summary.date.restriction.set  =Restricci\u00f3n de fecha activada
 monitor.summary.date.restriction.removed  =Restricci\u00f3n de fecha desactivada
 output.desc.all.users.entries.definition.notebook  =Cada entrade del estudiante
 button.submit  =Finalizar
-message.monitoring.summary.no.session  =No hay sesiones disponibles
+message.monitoring.summary.no.session  =Sin informaci\u00f3n disponible.
 label.notify.learner  =Enviar email con comentario al estudiante
 event.teacher.comment.subject  =El instructor ha dejado un comentario.
 event.teacher.comment.body  =Comentario:  {0}
@@ -120,7 +120,7 @@ label.reply.comment  =Comentario del instructor
 message.session.name  =Grupo
 label.editing.options  =Opciones de edici\u00f3n
 label.activity.completion  =Al finalizar actividad
-basic.forceResponse  =Se requiere respuesta?
+basic.forceResponse  =Respuesta requerida
 message.learner.blank.alertforceResponse  =La respuesta es requerida
 advanced.enable.anonymous.posts  =Habilitar mensajes an\u00f3nimos
 
