--- a/lams_tool_pixlr/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_pixlr/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = pixlr
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:06:21 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:55:51 CST 2018 
  
 #=================== labels for Pixlr Tool =================# 
 
@@ -18,13 +18,13 @@ button.basic  =Contenido
 button.advanced  =Configuraci\u00f3n
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.content  =Contenido
-advanced.lockOnFinished  =No permitir modificaciones una vez terminado
+advanced.lockOnFinished  =No permitir modificaciones una vez finalizada la actividad.
 advanced.allowViewOthersImages  =Permitir que los estudiantes vean los dibujos de otros
 link.download  =Descargar
 message.updateSuccess  =Cambios guardados
 message.unsavedChanges  =Esta p\u00e1gina tiene cambias que no han sido guardados
 pageTitle.learning  =Herramienta para dibujo Pixlr
-message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+message.defineLaterSet  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 pageTitle.monitoring  =Pixlr Seguimiento
 button.summary  =Resumen
 button.editActivity  =Editar Activiidad
@@ -96,7 +96,7 @@ admin.pixlrLanguageCSV  =Ingrese las claves de lenguage de Pixlr
 admin.formError  =Ha ocurrido un error al procesar su informaci\u00f3n. Por favor asegurese que el valor ingresado est\u00e1 separado por comas: xx,yy,zz
 admin.success  =Configuraci\u00f3n guardada.
 message.learner.saveWhenFinished  =Cuando termine de editar la im\u00e1gen, pulse en Fichero -> Guardar para retornar nuevamente.
-monitor.summary.td.addNotebook  =\u00bfAgregar reflexion despu\u00e9s de esta actividad?
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 pageTitle.admin  =Administraci\u00f3n Pixlr
 admin.return  =Volver a Administraci\u00f3n LAMS
 output.desc.image.url.definition.pixlr  =URL de la imagen de Pixlr
