--- a/lams_tool_preview/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_preview/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = peer_review
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 08:59:55 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 01:02:36 CST 2018 
  
 #=================== labels for Peer Review =================# 
 
@@ -20,7 +20,7 @@ label.authoring.heading.advance  =Configuraci\u00f3n
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.instruction  =Instrucciones
 label.authoring.basic.resource.preview  =Vista previa
-label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminada la actividad
+label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez finalizada la actividad.
 label.authoring.save.button  =Guardar
 label.authoring.cancel.button  =Cancelar
 error.resource.item.title.blank  =Complete el t\u00edtulo
@@ -51,7 +51,7 @@ message.activityLocked  =El instructor ha establecido que esta actividad no le p
 label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Configuraci\u00f3n avanzada
-monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al final de esta actividad.
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.monitoring.heading  =Evaluaci\u00f3n de Pares
 label.average.rating  =Evaluaci\u00f3n promedio {0}/{1} votos
@@ -74,8 +74,8 @@ label.no.minimum  =Sin m\u00ednimo
 label.no.maximum  =Sin m\u00e1ximo
 label.minimum.number.words  =N\u00famero m\u00ednimo de palabras en un comentario {0}
 warning.minimum.number.words  =Hay un n\u00famero m\u00ednimo requerido de palabras en un comentario {0}. Has ingresado {1} palabras.
-label.comment.textarea.tip  =Escriba su comentario aqu\u00ed y luego haga clic en la marca verde.
-label.max.number.marks.each.user  =N\u00famero m\u00e1ximo de evaluaciones por estudiante (se aplica solo a las evaluaciones de estrellas)
+label.comment.textarea.tip  =Escriba su comentario aqu\u00ed y luego haga clic en la tilde verde.
+label.max.number.marks.each.user  =N\u00famero m\u00e1ximo de evaluaciones (se aplica solo a las evaluaciones de estrellas)
 label.move.up  =Arriba
 label.move.down  =Abajo
 label.allow.comments  =Permitir que los estudiantes comenten en comentario de otros estudiantes
@@ -85,7 +85,7 @@ label.rating  =Evaluaci\u00f3n
 label.comment  =Comentario
 label.show.ratings.left.for.user  =Una vez completado, muestra los comentarios que quedan para el estudiante
 label.comment.minimum.number.words  =N\u00famero m\u00ednimo de palabras en un comentario {0}
-label.no.users  =No hay estudiantes disponibles para evaluar. Presione Actualizar para comprobar si hay nuevos estudiantes a evaluar.
+label.no.users  =No hay estudiantes disponibles para evaluar. Presione Actualizar para volver a intentar.
 label.no.ratings.left  =No m\u00e1s evaluaciones
 label.cant.rate  =Este estudiante no puede ser evaluado ya que atrajo la m\u00e1xima cantidad de puntos.
 label.refresh  =Actualizar
@@ -104,9 +104,9 @@ label.rating.learner.hedge.assign.marks  =Asignar puntaje a las respuestas. Punt
 label.rating.learner.justify  =Justifique el puntaje dado.
 label.rating.max.hedge  =Total puntaje distribuido
 error.rating.hedge.total.add.up  =El puntaje para el criterio {0} deben sumar hasta {1}
-error.rating.rank.all  =Debe evaluar a todos los alumnos para el criterio {0}
+error.rating.rank.all  =Debe evaluar a todos los estudiantes para el criterio {0}
 label.justify.hedging.marks  =Justifique su asignaci\u00f3n de puntajes.
-label.assign.marks  =Asigne hasta {0} puntos en total, compartiendo marcas entre los estudiantes. Total actual: {1}.
+label.assign.marks  =Asigne hasta {0} puntos en total, distribuyendo los puntos entre los estudiantes. Total actual: {1}.
 error.assign.marks  =El puntaje deben sumar hasta {0}.
 label.assign.ranks  =Complete las casillas con las entradas {0} superiores, arrastrando el nombre de los estudiantes en el recuadro.
 error.assign.ranks  =El puntaje deben sumar hasta {0}.
@@ -132,7 +132,7 @@ label.learning.average.rankings  =Evaluaci\u00f3n promedio:
 label.learning.average.marks  =Puntaje promedio:
 label.learning.your.justification  =Su justificaci\u00f3n
 label.monitoring.number.learners  =N\u00famero de estudiantes
-label.monitoring.number.learners.finished  =N\u00famero de alumnos que han finalizado
+label.monitoring.number.learners.finished  =N\u00famero de estudiantes que han finalizado
 label.monitoring.view  =Ver {0}
 label.close  =Cerrar
 event.sent.results.subject  =LAMS: se publicaron los resultados de {0}
@@ -153,8 +153,8 @@ label.show.ratings.left.by.user  =Despu\u00e9s de la finalizaci\u00f3n, muestre 
 label.ratings.by.others  =Evaluaci\u00f3n hacia usted de sus pares
 label.no.ratings.out.of.possible.ratings  ={0} evaluaci\u00f3n(es) de {1} evaluaciones posibles.
 label.export.team.results  =Exportar
-label.manage.users  =Administrar usuarios
-label.manage.users.description  =Desmarque a todos los alumnos que no deber\u00edan ser evaluados por otros
+label.manage.users  =Administrar estudiantes
+label.manage.users.description  =Desmarque a todos los estudiantes que no deber\u00edan ser evaluados por otros
 label.removed.user.warning  =El instructor ha limitado su capacidad de evaluar y ser evaluado en esta actividad.
 label.user.hidden  =Eliminar estudiante de la evaluaci\u00f3n
 label.hide.user.confirmation  =\u00bfEst\u00e1s seguro de que quieres dejar de evaluar a este estudiante? Llevar\u00e1 a la eliminaci\u00f3n de todas las calificaciones y comentarios dejados por \u00e9l/ella.
