--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,15 +2,15 @@ appName = submitfiles
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:02:44 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:46:50 CST 2018 
  
 #=================== labels for Submit Files =================# 
 
 activity.title  =Enviar Archivos
-activity.description  =Actividad que permite a estudiantes enviar archivos con tareas o entregas al profesor, el cual puede marcar y dar un puntaje de evaluaci\u00f3n. El profesor tambi\u00e9n puede exportar estas evaluaciones en formato de plantilla de Excel
-activity.helptext  =Actividad que permite a estudiantes enviar archivos con tareas o entregas al profesor, el cual puede marcar y dar un puntaje de evaluaci\u00f3n. El profesor tambi\u00e9n puede exportar estas evaluaciones en formato de plantilla de Excel
+activity.description  =Actividad que permite a estudiantes enviar archivos con tareas o entregas al instructor, el cual puede calificar y dar un puntaje de evaluaci\u00f3n. El instructor tambi\u00e9n puede exportar estas evaluaciones en formato de plantilla de Excel
+activity.helptext  =Actividad que permite a estudiantes enviar archivos con tareas o entregas al instructor, el cual puede calificar y dar un puntaje de evaluaci\u00f3n. El instructor tambi\u00e9n puede exportar estas evaluaciones en formato de plantilla de Excel
 tool.display.name  =Herramienta de Env\u00edo de Archivos
-tool.description  =Herramienta que permite a estudiantes enviar archivos con tareas o entregas al profesor
+tool.description  =Herramienta que permite a estudiantes enviar archivos con tareas o entregas al instructor
 label.view  =Ver
 label.download  =Descargar
 label.save  =Guardar
@@ -22,7 +22,7 @@ label.authoring.heading.advance  =Configuraci\u00f3n
 label.authoring.heading.advance.desc  =Ingrese las opciones avanzadas
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.instruction  =Instrucciones
-label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
+label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez finalizada la actividad.
 label.authoring.save.button  =Guardar
 label.authoring.cancel.button  =Cancelar
 authoring.exception  =Hay un problem con el envio, la razon es {0}
@@ -62,7 +62,6 @@ label.monitoring.saveMarks.button  =Guardar Evaluaciones
 label.monitoring.finishedMarks.button  =Finalizar
 label.monitoring.edit.activity.edit  =Editar Actividad
 label.monitoring.edit.activity.cancel  =Cancelar Edici\u00f3n
-label.monitoring.edit.activity.update  =Actualizar Actividad
 monitoring.statistic.title  =Estad\u00edsticas de Seguimiento
 monitoring.statistic.marked  =Archivos evaluados
 monitoring.statistic.not.marked  =Archivos sin evaluaci\u00f3n
@@ -74,14 +73,14 @@ submit.successful  =El Contenido ha sido creado!
 learner.form.filepath.displayname  =Nombre del Archivo a Enviar
 errors.mark.invalid.number  =Le evaluaci\u00f3n no es un n\u00famero valido
 authoring.msg.cancel.save  =Esta seguro que desea cancelar? Sus cambios no seran guardados
-define.later.message  =El contenido para esta actividad no ha sido definido todavia. Por favor espere a que su profesor defina el contenido.
-button.try.again  =Refrescar
+define.later.message  =El contenido para esta actividad no ha sido definido todavia. Por favor espere a que su instructor defina el contenido.
+button.try.again  =Actualizar
 button.finish  =Finalizar
 label.submit.file.suffix  =Subido los siguientes archivos
-label.assign.mark.message.prefix  =Asigne marcas y comentarios para el reporte de
+label.assign.mark.message.prefix  =Asigne puntajes y comentarios para el reporte de
 label.session.name  =Nombre de sessi\u00f3n
 label.count  =Cantidad
-label.no.user.available  =No hay usuarios disponibles
+label.no.user.available  =Sin datos
 msg.mark.released  =Los resultados de {0} han sido publicados.
 error.title.blank  =El t\u00edtulo no puede estar vacio
 label.authoring.advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
@@ -110,11 +109,11 @@ errors.maxdescsize  =La cantidad m\u00e1xima de caracteres para describir un arc
 label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
-monitor.summary.td.addNotebook  =Agregar anotador al finalizar Envio de Archivos
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.authoring.advanced.notify.mark.release  =Notifique a los estudiantes cuando las calificaciones esten listas
 event.mark.release.subject  =LAMS: Calificaciones listas
-event.mark.release.body  =El profesor a terminado de otorgar calificaciones a su archivo(s). \nSu calificaci\u00f3n es: \n\n{0}\n Este mensaje ha sido enviado autom\u00e1ticamente, no necesita responderlo.
+event.mark.release.body  =El instructor a terminado de otorgar calificaciones a su archivo(s). \nSu calificaci\u00f3n es: \n\n{0}\n Este mensaje ha sido enviado autom\u00e1ticamente, no necesita responderlo.
 event.mark.release.mark  =Archivo "{0}" enviado el {1}, la calificaci\u00f3n es {2}\n
 label.authoring.advanced.notify.onfilesubmit  =Notifique a los tutores cuando el estudiante haya enviado un archivo
 event.file.submit.subject  =LAMS: un estudiante ha enviado un archivo
@@ -129,7 +128,7 @@ monitor.summary.when.date.restriction.is.set  =Si se determina una restrici\u00f
 monitor.summary.after.date  =Fecha y hora
 monitor.summary.set.restriction  =Activar restricci\u00f3n
 monitor.summary.unset.restriction  =Eliminar restricci\u00f3n
-authoring.info.teacher.set.restriction  =El profesor ha puesto una restricci\u00f3n para la presentaci\u00f3n desde  {0}.
+authoring.info.teacher.set.restriction  =El instructor ha puesto una restricci\u00f3n para la presentaci\u00f3n desde  {0}.
 monitor.summary.notification  =Notificaci\u00f3n
 monitor.summary.date.restriction.set  =Restricci\u00f3n de fecha activada
 monitor.summary.date.restriction.removed  =Restricci\u00f3n de fecha desactivada
@@ -165,4 +164,4 @@ label.waiting.for.leader.launch.time.limit  =L\u00edder no ha comenzado la activ
 label.use.select.leader.tool.output  =Utilizar l\u00edderes
 
 
-#======= End labels: Exported 157 labels for es ES =====
+#======= End labels: Exported 156 labels for es ES =====
