--- a/lams_tool_scribe/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_scribe/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = scribe
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:04:34 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:53:54 CST 2018 
  
 #=================== labels for Scribe =================# 
 
@@ -20,7 +20,7 @@ label.authoring.basic.content  =Contenido:
 label.authoring.basic.instructions  =Instrucciones:
 label.authoring.basic.heading  =Cabeceras
 label.authoring.basic.heading.add  =Crear encabezado
-advanced.lockOnFinished  =No permitir modificaciones una vez terminado
+advanced.lockOnFinished  =No permitir modificaciones una vez finalizada la actividad.
 advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 advanced.selectScribe  =Seleccionar Escriba
 advanced.firstLearner  =Primer estudiante en llegar a la actividad toma el rol de Escriba
@@ -30,8 +30,8 @@ link.view  =Ver
 link.delete  =Borrar
 link.edit  =Editar
 message.updateSuccess  =Guardar cambios
-pageTitle.learning  =Escriba online
-message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+pageTitle.learning  =Escriba
+message.defineLaterSet  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 pageTitle.monitoring  =Escriba Seguimiento
 button.summary  =Reporte
 button.editActivity  =Editar Actividad
@@ -76,7 +76,7 @@ button.agree  =De acuerdo
 button.submitReport  =Enviar reporte
 button.forceComplete  =Terminar esta actividad
 button.submit  =A\u00f1adir
-button.refresh  =Refrescar
+button.refresh  =Actualizar
 message.voteStatistics  ={0} de {1} estan de acuerdo
 message.scribeInstructions  =Usted, {0}, es el Escriba de su grupo.
 message.learnerInstructions  =Usted esta entrando en un grupo de discusi\u00f3n y elaboraci\u00f3n de informe.
@@ -86,7 +86,7 @@ message.confirmForceComplete  =\u00bfEsta seguro que desea continuar? Si es el c
 label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
-monitor.summary.td.addNotebook  =Agregar anotador al finalizar Escriba
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 message.waitForScribe  =Por favor espere a que el instructor elija al escriba.
 button.submitActivity  =Finalizar
