--- a/lams_tool_spreadsheet/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_spreadsheet/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = spreadsheet
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:55:21 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:50:10 CST 2018 
  
 #=================== labels for Online Spreadsheet =================# 
 
@@ -10,7 +10,7 @@ appName  =Hoja de C\u00e1lculo
 activity.description  =Hoja de C\u00e1lculo
 activity.helptext  =Hoja de C\u00e1lculo
 tool.display.name  =Hoja de C\u00e1lculo
-tool.description  =Herramienta que permite usar una hoja de c\u00e1lculo en linea.
+tool.description  =Herramienta que permite usar una hoja de c\u00e1lculo
 label.authoring.heading  =Hoja de C\u00e1lculo Edici\u00f3n
 label.authoring.title  =Hoja de C\u00e1lculo
 label.authoring.heading.basic  =Contenido
@@ -21,57 +21,57 @@ label.authoring.basic.instruction  =Instrucciones
 label.authoring.basic.resource.add.instruction  =A\u00f1adir instrucciones
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.spreadsheet  =Hoja de C\u00e1lculo
-label.authoring.advanced.reflectOnActivity  =Agregar anotaci\u00f3n al final de la actividad con las siguientes intrucciones:
+label.authoring.advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 label.authoring.advanced.play.only  =Ver solamente (los estudiantes pueden solo ver la hoja de c\u00e1lculo pero no pueden guardar cambios)
 label.authoring.advanced.learners.are.allowed.to.save  =Los estudiantes pueden realizar cambios y enviar sus hojas de c\u00e1lculo.
 label.authoring.advanced.enable.spreadsheet.marking  =Permiti que la hoja de c\u00e1lculo pueda ser evaluada
 label.authoring.cancel.button  =Cancelar
 label.learning.title  =Hoja de C\u00e1lculo
 label.learning.comments  =Comentarios
-label.learning.marks  =Notas
+label.learning.marks  =Puntajes
 label.learning.not.available  =No disponible
 label.monitoring.summary.advanced.settings  =Opciones Avanzadas
 label.monitoring.summary.learner  =Estudiante
-label.monitoring.summary.marked  =\u00bfMarcado?
-label.monitoring.summary.lock.when.finished  =No permitir modificaciones una vez terminado
+label.monitoring.summary.marked  =\u00bfCalificado?
+label.monitoring.summary.lock.when.finished  =No permitir modificaciones una vez finalizada la actividad.
 label.monitoring.summary.individual.spreadsheets  =Estudiantes pueden enviar sus propia hoja de c\u00e1lculo
 label.monitoring.summary.marking.enabled  =Se puede evaluar la hoja de c\u00e1lculo
 label.monitoring.summary.notebook.reflection  =Anotaci\u00f3n al finalizar
 label.monitoring.summary.overall.summary  =Resumen
 label.monitoring.summary.title.reflection  =Reflexi\u00f3n
 label.monitoring.summary.reflection  =Reflexi\u00f3n
-label.monitoring.summary.mark.button  =Notas
+label.monitoring.summary.mark.button  =Puntajes
 label.monitoring.summary.user  =Estudiante
 label.monitoring.summary.viewAllMarks.button  =Ver todas las notas
 label.monitoring.summary.releaseMarks.button  =Enviar notas a estudiantes
-label.monitoring.summary.downloadMarks.button  =Bajar Notas
+label.monitoring.summary.downloadMarks.button  =Exportar puntajes
 label.monitoring.summary.marking.marking  =Corregir
-label.monitoring.summary.marking.marks  =Notas
+label.monitoring.summary.marking.marks  =Puntajes
 label.monitoring.summary.marking.comments  =Comentarios
-label.monitoring.summary.marking.update.marks  =Actualizar Notas
+label.monitoring.summary.marking.update.marks  =Actualizar puntajes
 label.monitoring.edit.activity.edit  =Editar
 label.monitoring.statistics.session.name  =Secci\u00f3n
 label.monitoring.statistics.marked  =Hojas de c\u00e1lculo evaluadas
 label.monitoring.statistics.not.marked  =Hojas de c\u00e1lculo no evaluadas
 label.monitoring.statistics.total.spreadsheets.sent.by.learners  =N\u00famero de hojas de c\u00e1lculo
 label.monitoring.downloadmarks.learner.name  =Nombre del estudiante
-label.monitoring.downloadmarks.marks  =Notas
+label.monitoring.downloadmarks.marks  =Puntajes
 label.monitoring.downloadmarks.comments  =Comentarios
 label.monitoring.vieawallmarks.heading.marking  =Correcci\u00f3nes
 label.monitoring.vieawallmarks.learner  =Estudiante
 label.monitoring.vieawallmarks.spreadsheet.submitted  =Hojas de c\u00e1lculo enviadas
 label.monitoring.vieawallmarks.true  =Verdadero
 label.monitoring.vieawallmarks.false  =Falso
-label.monitoring.vieawallmarks.marks  =Notas
+label.monitoring.vieawallmarks.marks  =Puntajes
 label.monitoring.vieawallmarks.comments  =Comentarios
-label.monitoring.vieawallmarks.update.marks  =Actualizar Notas
+label.monitoring.vieawallmarks.update.marks  =Actualizar puntajes
 label.reviewitem.spreadsheet.sent.by  =Hoja de C\u00e1lculo de
-label.reviewitem.user.hasnot.sent.spreadsheet  =El usuario no ha enviado hoja de c\u00e1lculo todavia.
-label.reviewitem.title  =Revisar la hoja de c\u00e1lculo de usuario
+label.reviewitem.user.hasnot.sent.spreadsheet  =El estudiante no ha enviado hoja de c\u00e1lculo todavia.
+label.reviewitem.title  =Revisar la hoja de c\u00e1lculo
 label.export.marking.enabled  =Las hojas de c\u00e1lculo se pueden evaluar
 label.export.notebook.reflection.enabled  =Existe anotador
-error.summary.marks.blank  =Debe poner una marca
-error.summary.marks.invalid.number  =La marca/evaluaci\u00f3n debe ser un n\u00famero valido
+error.summary.marks.blank  =Debe asignar un puntaje
+error.summary.marks.invalid.number  =El puntaje debe ser un n\u00famero valido
 error.summary.comments.blank  =No puede dejar comentarios en blanco
 error.upload.failed  =El archivo que ha intentado subir a fallado: {0}
 error.msg.default.content.not.find  =No se han podido encontrar el contenido de defecto de estar herramienta.
@@ -87,14 +87,14 @@ label.edit  =Editar
 message.monitoring.summary.no.session  =No hay sessiones disponibles.
 label.save  =Guardar
 label.cancel  =Cancelar
-define.later.message  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+define.later.message  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 button.try.again  =Intente nuevamente
 page.title.monitoring.view.reflection  =Ver Anotaciones
 message.no.reflection.available  =No hay anotaciones disponibles
 title.reflection  =Reflexi\u00f3n
 activity.title  =Hoja de C\u00e1lculo
 label.authoring.save.button  =Guardar
-label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
+label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez finalizada la actividad.
 label.authoring.heading.advance  =Configuraci\u00f3n
 label.up  =Hacia arriba
 label.down  =Hacia abajo
@@ -105,7 +105,7 @@ label.finish  =Finalizar
 error.msg.repository  =Ha ocurrido un error con el archivo que ha intentado subir.
 message.alertContentEdit  =Advertencia: uno o mas estudiantes ya han accedido a esta actividad. Cambiar el contenido de la misma resultar\u00e1 en que estudiantes reciban distinta informaci\u00f3n.
 message.activityLocked  =El instructor ha configurado esta actividad para no permitir cambios una vez finalizada la misma.
-msg.mark.released  =Las marcas de {0} ya estan disponibles.
+msg.mark.released  =El puntaje de {0} ya estan disponibles.
 label.export.reflection  =Anotaciones
 message.warnLockOnFinish  =Atenci\u00f3n: una vez que presione en "Pr\u00f3xima actividad", si usted vuelve a esta hoja de c\u00e1lculo, no podr\u00e1 efectuar cambios a la misma.
 label.on  =Si
