--- a/lams_tool_survey/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_survey/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = survey
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:04:04 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:53:37 CST 2018 
  
 #=================== labels for Survey =================# 
 
@@ -36,9 +36,7 @@ label.authoring.basic.survey  =Encuestas
 label.authoring.basic.survey.edit  =Editar
 label.authoring.basic.survey.delete  =Borrar
 label.authoring.basic.survey.title.input  =T\u00edtulo
-label.authoring.online.filelist  =Archivos Online
-label.authoring.offline.filelist  =Archivos Offline
-label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
+label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez finalizada la actividad.
 label.authoring.advance.show.on.one.page  =Todas las preguntas en una sola p\u00e1gina
 label.authoring.save.button  =Guardar
 label.authoring.cancel.button  =Cancelar
@@ -134,7 +132,7 @@ label.export.reflection  =Reflexiones
 label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
-monitor.summary.td.addNotebook  =Agregar anotador al finalizar la encuesta
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.authoring.advanced.notify.onanswersubmit  =Notificar a los tutores cuando el estudiante envie respuestas
 event.answer.submit.subject  =LAMS: nueva respuesta a la encuesta
@@ -186,4 +184,4 @@ label.summary.downloaded=  =Informe descargado
 label.timestamp  =Fecha y hora
 
 
-#======= End labels: Exported 178 labels for es ES =====
+#======= End labels: Exported 176 labels for es ES =====
