--- a/lams_tool_task/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_task/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = takslist
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:04:50 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:49:27 CST 2018 
  
 #=================== labels for Task List =================# 
 
@@ -42,7 +42,7 @@ label.authoring.basic.resource.title.input  =T\u00edtulo
 label.authoring.basic.resource.description.input  =Descripci\u00f3n
 label.authoring.choosefile.button  =Elejir archivo
 label.authoring.advance.allow.contribute.tasks  =\u00bfPueden los estudiantes contribuir tareas?
-label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
+label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez finalizada la actividad.
 label.authoring.advance.monitor.verification.required  =El tutor(es) deben verificar que las tareas se hayan realizado para que los estudiantes puedan continuar
 label.authoring.advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 label.authoring.advance.run.content.sequentialOrder  =Las tareas deben finalizarse de manera secuencial
@@ -76,10 +76,10 @@ warning.msg.authoring.deletion.affect.conditions  =Si borra esta tarea puede afe
 label.learning.title  =Lista de Tareas Aprendizaje
 label.learning.tasks.to.do  =Tareas a realizar
 label.learning.new.task.details  =Detalles de tareas
-label.learning.check.for.new  =Refrescar
+label.learning.check.for.new  =Actualizar
 label.learning.comment.or.instruction  =Comentarios/Instrucciones
 label.learning.required.tasks  =tareas requeridas
-label.learning.wait.for.monitor.verification  =No puede finalizar esta actividad hasta que su tutor verifique las tareas que ha realizado. Contacte a su tutor y haga click en Refrescar para finalizar la actividad
+label.learning.wait.for.monitor.verification  =No puede finalizar esta actividad hasta que su tutor verifique las tareas que ha realizado. Contacte a su tutor y haga click en Actualizar para finalizar la actividad
 label.learning.responses.locked  =Atenci\u00f3n: Una vez finalizada esta actividad, si vuelve a la misma no podr\u00e1 realizar m\u00e1s tareas.
 label.learning.responses.locked.reminder  =Esta actividad ha sido configurada de manera que una vez finalizada, al volver a la misma no podr\u00e1 realizar m\u00e1s cambios a las tareas.
 label.learning.info.add.comment.required  =Debe enviar al menos un comentario para poder finalizar esta tarea
@@ -129,7 +129,7 @@ button.upload  =Subir
 button.add  =A\u00f1adir
 message.monitoring.summary.no.session  =No hay sessi\u00f3n disponible
 label.cancel  =Cancelar
-define.later.message  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+define.later.message  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 button.try.again  =Tratar de nuevo
 message.no.reflection.available  =No hay reflexiones
 monitoring.label.access.time  =Acceso
@@ -140,7 +140,7 @@ message.alertContentEdit  =Advertencia: Uno o m\u00e1s estudiantes ya ha accedid
 label.finished  =Finalizar
 label.finish  =Finalizar
 label.default.user.name  =Instructor
-output.desc.learner.number.of.tasks.completed  =N\u00famero de tareas finalizadas
+output.desc.learner.number.of.tasks.completed  =N\u00famero de tareas completadas
 output.desc.tool.condition  =Condiciones ingresadas manualmente
 label.on  =Si
 label.off  =No
