--- a/lams_tool_videorecorder/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_videorecorder/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = videorecorder
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:56:42 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:56:26 CST 2018 
  
 #=================== labels for Video Recorder =================# 
 
@@ -18,7 +18,7 @@ button.basic  =Contenido
 button.advanced  =Configuraci\u00f3n
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.content  =Contenido:
-advanced.lockOnFinished  =No permitir modificaciones una vez terminado
+advanced.lockOnFinished  =No permitir modificaciones una vez finalizada la actividad.
 advanced.allowRichEditor  =Permitir
 advanced.allowComments  =Permitir comentarios
 advanced.allowRatings  =Permitir puntuaci\u00f3n
@@ -28,14 +28,12 @@ advanced.allowLearnerVideoExport  =Permitir a los estudiantes exportar sus graba
 advanced.allowLearnerVideoVisibility  =Permitir a los estudiantes ver las grabaciones de otros
 advanced.exportAll  =Exportar todas las grabaciones al exportar portfolio
 advanced.exportOffline  =Incluir grabaciones al exportar portfolio
-instructions.type.online  =Online
-instructions.type.offline  =Offline
 label.filename  =Nombre de archivo
 label.type  =Tipo
 link.delete  =Borrar
 message.updateSuccess  =Guardar cambios
 pageTitle.learning  =Video Grabadora
-message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+message.defineLaterSet  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 pageTitle.monitoring  =Video Grabadora Seguimiento
 button.summary  =Resumen
 button.editActivity  =Editar Actividad
@@ -180,9 +178,9 @@ output.desc.number.ratings.definition.videoRecorder  =N\u00famero de puntuacione
 videorecorder.error.noconfig  =LAMS no tiene un servidor de video configurado. Por favor contacte a su administrador de sistema.
 videorecorder.camera.not.available  =No se ha detectado c\u00e1mara de video.
 videorecorder.mic.not.available  =No se ha detectado micr\u00f3fono.
-message.monitoring.summary.no.session  =No hay sesion disponible
+message.monitoring.summary.no.session  =Sin informaci\u00f3n disponible.
 button.submit  =Finalizar
 message.no.reflection.available  =No hay reflexi\u00f3n disponible.
 
 
-#======= End labels: Exported 177 labels for es ES =====
+#======= End labels: Exported 175 labels for es ES =====
