--- a/lams_tool_vote/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_vote/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = voting
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:03:23 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:49:04 CST 2018 
  
 #=================== labels for Voting =================# 
 
@@ -27,14 +27,14 @@ label.allowText  =Permitir a los estudiantes una entrada de su elecci\u00f3n
 label.maxNomCount  =M\u00e1ximo n\u00famero de votos
 label.vote.nominations  =Nominaciones
 label.nomination  =Nominaci\u00f3n
-label.vote.lockedOnFinish  =No permitir modificaciones una vez terminado
+label.vote.lockedOnFinish  =No permitir modificaciones una vez finalizada la actividad.
 label.authoring.title  =T\u00edtulo
 label.authoring.instructions  =Instrucciones
 label.moveDown  =Hacia abajo
 label.other  =Otro
 label.view.chart  =Ver gr\u00e1fica de torta
-count.total.user  =Total de usuarios:
-count.finished.user  =Total de usuarios que han terminado:
+count.total.user  =Total de estudiantes:
+count.finished.user  =Total de estudiantes que han terminado:
 label.learning.report  =Reporte de Estudiantes
 label.view  =Ver
 button.cancel  =Cancelar
@@ -128,7 +128,7 @@ label.open.votes  =Otros votos:
 label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
-monitor.summary.td.addNotebook  =Agregar anotador al finalizar Votaci\u00f3n
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.learner.nomination  =Su nominaci\u00f3n es:
 error.minNominationCount.not.reached  =No ha seleccionado las nominaciones suficientes. Debe seleccionar por lo menos
@@ -147,7 +147,7 @@ label.users.from.group  =Otros estudiantes que participan en el grupo:
 label.use.select.leader.tool.output  =Utilice los l\u00edderes de herramienta Seleccionar L\u00edder
 label.group.leader  =L\u00edder del grupo: {0}
 button.submitActivity  =Finalizar
-label.total.number.students.voted  =Un total de {0} sobre {1} alumnos han votado
+label.total.number.students.voted  =Un total de {0} sobre {1} estudiantes han votado
 label.all.groups.total  =Total todos los grupos
 label.data.flow.choose  =o elegir una entrada:
 label.data.flow.none  =Ninguno
