--- a/lams_tool_wiki/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_wiki/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = wiki
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:05:52 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:55:30 CST 2018 
  
 #=================== labels for Wiki =================# 
 
@@ -21,13 +21,13 @@ button.edit  =Editar
 label.authoring.basic.title  =T\u00edtulo:
 label.authoring.basic.content  =Contenido:
 label.authoring.basic.wikipagevisible  =\u00bfPueden los estudiante editar esta p\u00e1gina?
-advanced.lockOnFinished  =No permitir modificaciones una vez terminado
+advanced.lockOnFinished  =No permitir modificaciones una vez finalizada la actividad.
 advanced.allowLearnerCreatePages  =Permitir a los estudiantes crear p\u00e1ginas en el wiki
 advanced.allowLearnerInsertLinks  =Los estudiantes pueden insertar enlaces a contenido externo
 advanced.allowLearnerAttachImages  =Los estudiantes pueden adjuntar im\u00e1genes
 advanced.notifyChange  =Enviar notificacion a  los tutores cada vez que el wiki sea modificado
 advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
-message.no.reflection.available  =No hay anotaci\u00f3n dispo
+message.no.reflection.available  =No hay anotaci\u00f3n disponible
 advanced.editingLimits  =Editar limites
 advanced.editingLimits.prompt  =N\u00famero de veces que un estudiante puede editar el wiki
 advanced.editingLimits.minimum  =M\u00ednimo:
@@ -37,7 +37,7 @@ advanced.editingLimits.nomaximum  =Sin m\u00e1ximo
 advanced.editingLimits.error  =El n\u00famero m\u00e1ximo de ediciones debe ser mayor o igual que el m\u00ednimo.
 message.updateSuccess  =Guardar Cambios
 pageTitle.learning  =Wiki
-message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+message.defineLaterSet  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 pageTitle.monitoring  =Wiki Seguimiento
 button.summary  =Resumen
 button.editActivity  =Editar Actividad
@@ -68,11 +68,11 @@ message.learner.blank.input  =No ha realizado ning\u00fan cambio. \u00bfEsta seg
 button.finish  =Finalizar
 message.alertContentEdit  =Advertencia: uno o m\u00e1s estudiantes ya han accedido esta actividad. Cambiar el contenido de la actividad ahora resultar\u00e1 en que estudiantes reciban diferente informaci\u00f3n.
 message.warnLockOnFinish  =Atenci\u00f3n: una vez finalizada esta actividad no podr\u00e1 hacer cambios.
-message.activityLocked  =El profesor ha configurado esta actividad para que una vez finalizada no se puedan efectuar m\u00e1s cambios. Dado que usted a regresado al Wiki, puede ver el contenido pero no podr\u00e1 modificarlo.
+message.activityLocked  =El instructor ha configurado esta actividad para que una vez finalizada no se puedan efectuar m\u00e1s cambios. Dado que usted a regresado al Wiki, puede ver el contenido pero no podr\u00e1 modificarlo.
 message.minumumEditsNotReached  =Atenci\u00f3n: Usted no ha alcanzado el n\u00famero de ediciones que se requiere. Debe realizar {0} ediciones antes de finalizar esta actividad.
 message.warnMaxEdits  =Atenci\u00f3n: usted solo puede hacer {0} ediciones m\u00e1s. Una vez realizadas estas ediciones, no podr\u00e1 continuar editando el contenido.
 message.maxEditsReached  =Se han realizado el m\u00e1ximo n\u00famero de ediciones. De ahora en adelante el contenido no puede ser editado.
-message.pageNotEditable  =El profesor ha cambiado la configuraci\u00f3n de manera que no se pueda editar el contenido.
+message.pageNotEditable  =El instructor ha cambiado la configuraci\u00f3n de manera que no se pueda editar el contenido.
 titleHeading.instructions  =Intrucciones
 label.authoring.basic.instructions  =Instrucciones:
 label.wiki.body  =Cuerpo del documento
@@ -83,8 +83,8 @@ label.wiki.add.toolTip  =A\u00f1adir una nueva p\u00e1gina al Wiki
 label.wiki.add.title.exists  =Ya existe una p\u00e1gina con nombre {0}, Eliga un nuevo nombre
 label.wiki.add.title.required  =El t\u00edtulo de la p\u00e1gina no puede ser dejado en blanco.
 label.wiki.last.edit  =\u00daltima vez editado por <b>{0}</b>, el {1}
-label.wiki.refresh  =Refrescar
-label.wiki.refresh.toolTip  =Refrescar la p\u00e1gina y obtener nuevo contenido
+label.wiki.refresh  =Actualizar
+label.wiki.refresh.toolTip  =Actualizar la p\u00e1gina
 label.wiki.view  =Ver
 label.wiki.view.toolTip  =Ver esta p\u00e1gina
 label.wiki.remove  =Borrar
@@ -114,7 +114,7 @@ label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
 monitor.th.sessions  =Sessiones
 monitor.th.numlearners  =N\u00famero de estudiantes
-monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al final de esta actividad.
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 monitor.nosessions  =Todavia no hay seciones para este Wiki.
 monitor.notebooks  =Anotaciones
@@ -133,8 +133,8 @@ label.wiki.restore  =Restaurar
 label.wiki.restore.toolTip  =Restaurar p\u00e1gina previamente eliminada
 notify.pageRestored.subject  =Wiki ha sido restaurada por {0}.
 notify.pageRestored.body  =Una p\u00e1gina wiki ha sido restaurada por {0} de {1}. Para ver la Wiki, vaya a {2}
-label.wiki.remove.mark.toolTip  =Marcar esta p\u00e1gina como eliminada
-label.wiki.remove.mark.confirm  =\u00bfEst\u00e1 seguro que desea marcar esta p\u00e1gina Wiki como eliminada?
+label.wiki.remove.mark.toolTip  =Etiquetar esta p\u00e1gina como eliminada
+label.wiki.remove.mark.confirm  =\u00bfEst\u00e1 seguro que desea etiquetar esta p\u00e1gina Wiki como eliminada?
 label.wiki.removed  =Esta p\u00e1gina ha sido eliminada.
 button.submit  =Finalizar
 error.title.invalid.characters  =T\u00edtulo no puede contener ninguno de estos caracteres: ^, <, >, #, (, ), \, |, ', ", {, }, `
