--- a/lams_gradebook/conf/language/lams/ApplicationResources.properties
+++ b/lams_gradebook/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = gradebook
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 20:58:20 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:50:51 CST 2018 
  
 #=================== labels for Gradebook =================# 
 
@@ -69,7 +69,7 @@ gradebook.export.lesson.summary  =Lesson summary
 gradebook.export.learner.view  =Learner view
 gradebook.export.time.taken.seconds  =Time taken (seconds)
 gradebook.export.average.time.taken.seconds  =Median time taken (seconds)
-gradebook.export.user  =User
+gradebook.export.user  =Student
 gradebook.exportcourse.course.summary  =Course summary
 gradebook.exportcourse.lessonFeedback  =Lesson feedback
 gradebook.exportcourse.mark  =Mark
@@ -93,8 +93,8 @@ label.max.mark  =Max mark
 label.actuals  =TOTAL
 label.max  =Max mark available
 label.overall.totals  =Overall totals
-audit.lesson.change.mark  =Changed mark for user {0}. LessonId: {1}. Old mark: {2}, new mark: {3}
-audit.activity.change.mark  =Changed mark for user {0}. LessonId: {1}. ActivityId:{2}. Old mark: {3}, new mark: {4}
+audit.lesson.change.mark  =Changed mark for student {0}. LessonId: {1}. Old mark: {2}, new mark: {3}
+audit.activity.change.mark  =Changed mark for student {0}. LessonId: {1}. ActivityId:{2}. Old mark: {3}, new mark: {4}
 audit.marks.released.on  =Marks have been released for lessonId {0}.
 audit.marks.released.off  =Marks have been hidden for lessonId {0}.
 gradebook.export.login  =Username
@@ -102,7 +102,7 @@ button.help  =Help
 button.help.tooltip  =Open help
 gradebook.monitor.show.dates  =Show dates
 gradebook.monitor.hide.dates  =Hide dates
-gradebook.export.excel  =Export grades
+gradebook.export.excel  =Export
 label.select.lessons.to.export  =Select lessons to export
 label.marks  =Marks
 label.number.learners.in.mark.range  =Number of learners in mark range
