--- a/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_learning/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = learner_java
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu May 10 20:31:30 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:51:50 CST 2018 
  
 #=================== labels for Learner (Java) =================# 
 
@@ -102,7 +102,7 @@ label.schedule.gate.open.remaining  =You can only move through the gate and atte
 message.lesson.restart  =Restart lesson from the beginning again
 message.lesson.restart.button  =Restart
 message.learner.progress.restart.confirm  =Are you sure you want to start the lesson from the beginning?
-mynotes.add.new.current.lesson.button  =Add note this lesson
+mynotes.add.new.current.lesson.button  =Add note
 label.group.confirm.header  =Confirm group selection
 label.group.confirm.button  =Confirm
 label.group.confirm.areyoujoining  =Are you joining
@@ -112,7 +112,7 @@ gradebook.columntitle.mark  =Score
 gradebook.columntitle.activity  =Activity
 gradebook.columntitle.averageMark  =Average score
 gradebook.columntitle.progress  =Progress
-gradebook.lesson.complete  =Score for this lesson
+gradebook.lesson.complete  =Lesson's score
 gradebook.learner.lesson.mark  =Your score
 label.kumalive.rubric.name  =Enter rubric name
 label.kumalive.rubric.up  =Move rubric up
