--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Wed May 16 15:40:38 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:51:10 CST 2018 
  
 #=================== labels for Assessment =================# 
 
@@ -155,7 +155,7 @@ label.monitoring.summary.choose  =Choose...
 label.monitoring.summary.user.name  =Name
 label.monitoring.summary.total  =Total
 label.monitoring.summary.learner.summary  =Learner summary
-label.monitoring.user.summary.history.responses  =User's history of responses
+label.monitoring.user.summary.history.responses  =History of responses
 label.monitoring.user.summary.user.name  =Username
 label.monitoring.user.summary.number.attempts  =Number of attempts
 label.monitoring.user.summary.time.last.attempt  =Time in the last attempt
@@ -177,8 +177,8 @@ label.monitoring.question.summary.group  =Group:
 label.monitoring.question.summary.ok  =Ok
 output.desc.learner.total.score  =Last total score
 output.desc.learner.time.taken  =Time taken
-output.desc.learner.number.of.attempts  =Number of attempts made by user
-output.user.score.for.question  =User's score for the question:
+output.desc.learner.number.of.attempts  =Number of attempts
+output.user.score.for.question  =Score for the question:
 error.form.validation.error  =You have 1 error in a form. It has been highlighted
 error.form.validation.errors  =You have {0} errors in a form. They have been highlighted
 error.form.validation.hundred.score  =One of the answers should have a grade of 100% so it is possible to get full marks for this question.
