--- a/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_forum/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = forum
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 09:01:30 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:45:32 CST 2018 
  
 #=================== labels for Forum =================# 
 
@@ -15,7 +15,7 @@ label.authoring.heading.basic  =Foro de discusi\u00f3n
 label.authoring.create.new.topic  =Crear nuevo tema de discusi\u00f3n
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.instruction  =Instrucciones
-label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
+label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez finalizada la actividad.
 label.authoring.save.button  =Guardar
 label.authoring.cancel.button  =Cancelar
 label.authoring.advance.allow.edit  =Permite a los estudiantes cambiar sus propios mensajes
@@ -32,17 +32,13 @@ lable.topic.subject.by  =De
 label.back.to.forum  =Volver al lista de temas.
 lable.topic.title.message.number  =N\u00famero de aportaciones
 lable.topic.title.average.mark  =Puntaje promedio
-page.title.monitoring.content.userlist  =Monitoreo de lista de estudiantes
-page.title.monitoring.view.user.mark  =Ver puntaje de usuarios
-page.title.monitoring.edit.user.mark  =Editar puntaje de usuarios
-page.title.monitoring.view.activity  =Ver actividad
+page.title.monitoring.view.user.mark  =Ver puntaje
+page.title.monitoring.edit.user.mark  =Editar puntaje
 page.title.monitoring.edit.activity  =Editar Actividad
 page.title.monitoring.view.instructions  =Ver instrucciones
 page.title.monitoring.view.topic  =Ver aportaciones
 page.title.monitoring.statistic  =Estad\u00edsticas
-page.title.monitoring.definelater  =Definir contenido del foro
 label.monitoring.edit.activity.cancel  =Cancelar
-label.monitoring.edit.activity.update  =Actualizar
 label.monitoring.edit.activity.edit  =Editar
 label.monitoring.statistic.average.mark  =Puntaje promedio de aportaciones
 lable.monitoring.statistic.total.message  =Total de aportaciones
@@ -50,14 +46,10 @@ error.valueReqd  =Valor requerido
 error.mark.needNumber  =La calificaci\u00f3n tiene que ser un n\u00famero entero
 error.mark.invalid.number  =La calificaci\u00f3n no es un n\u00famero entero
 error.title.empty  =El asunto no puede omitirse
-title.messageTopic.open  =Detalles del tema
 title.message.add  =Agregar Mensaje
 title.message.open  =Ver Mensaje
 title.message.reply  =Responder
 title.message.edit  =Editar
-title.message.view  =Lista de aportaciones
-title.message.view.topic  =Ver aportaci\u00f3n
-title.message.delete  =Borrar aportaci\u00f3n
 message.label.subject  =Asunto
 message.label.body  =Mensaje
 message.label.attachment  =Archivo adjunto
@@ -95,7 +87,7 @@ message.not.avaliable  =No disponible
 lable.update.mark  =Actualizar calificaci\u00f3n
 message.assign.mark  =Asignar calificaci\u00f3n y comentario para el informe
 message.session.name  =Nombre de sesi\u00f3n
-message.monitoring.summary.no.users  =Usuarios no disponibles
+message.monitoring.summary.no.users  =Sin datos
 message.view.all.marks  =Ver todas las puntuaciones
 message.download.marks  =Descargar calificaciones
 label.monitoring.summary.view.forum  =Ver Foro
@@ -111,12 +103,12 @@ label.cancel  =Cancelar
 authoring.tab.basic  =Contenido
 authoring.tab.advanced  =Configuraci\u00f3n
 page.title.authoring.init  =Creaci\u00f3n del Foro
-authoring.msg.cancel.save  =\u00bfEst\u00e1 seguro que desea cerrar esta ventana sin salvar previamente?
-define.later.message  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
-button.try.again  =Refrescar
+authoring.msg.cancel.save  =\u00bfEst\u00e1 seguro que desea cerrar esta ventana sin guardar cambios?
+define.later.message  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
+button.try.again  =Actualizar
 button.close  =Cerrar
 button.release.mark  =Presentar puntaje a estudiantes
-msg.mark.released  =Las marcas de {0} han sido presentadas a los estudiantes.
+msg.mark.released  =Los puntajes de {0} han sido presentadas a los estudiantes.
 label.authoring.advance.allow.upload  =Permitir a los estudiante subir archivos adjuntos
 label.authoring.advance.allow.new.topics  =Permitir a los estudiantes crear nuevos temas de discusi\u00f3n
 label.authoring.advance.number.reply  =N\u00famero de aportaciones por estudiante por hilo.
@@ -142,7 +134,7 @@ label.default.user.name  =Instructor
 error.subject.required  =El t\u00edtulo no puede dejarse en blanco.
 error.body.required  =El cuerpo de la aportaci\u00f3n no pude dejarse en blanco.
 title.original.message.reply  =Aportaci\u00f3n original
-output.desc.learner.number.of.posts  =N\u00famero de aportaciones del estudiante en el foro
+output.desc.learner.number.of.posts  =N\u00famero de aportaciones
 label.download.marks.heading.date  =Fecha
 label.download.marks.heading.marks  =Puntaje
 label.download.marks.heading.comments  =Comentarios
@@ -157,11 +149,11 @@ label.no  =No
 label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
-monitor.summary.td.addNotebook  =Agregar anotador al finalizar el Foro
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
 monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.authoring.advanced.notify.mark.release  =Notificar a los estudiantes cuando las calificaciones esten listas
 event.mark.release.subject  =LAMS: Calificaciones listas
-event.mark.release.body  =El profesor ha terminado de calificar las aportaciones del foro.\nSu calificaci\u00f3n es:\n\n{0}\nEste mensaje ha sido enviado automaticamente.
+event.mark.release.body  =El instructor ha terminado de calificar las aportaciones del foro.\nSu calificaci\u00f3n es:\n\n{0}\nEste mensaje ha sido enviado automaticamente.
 event.mark.release.mark  =La aportaci\u00f3n titulada "{0}" enviado en {1} ha sido calificado: {2}. \n
 authoring.tab.conditions  =Condiciones
 label.authoring.heading.conditions.desc  =Por favor, ingrese condiciones para el Foro
@@ -192,7 +184,7 @@ label.postingLimits.topic.reminder.max  =El n\u00famero m\u00e1ximo de aportacio
 label.postingLimits.topic.reminder.min  =El n\u00famero m\u00ednimo de aportaciones para este hilo es de {0}. Usted a hecho {1} aportaciones.
 label.authoring.advanced.send.emails.to  =En las nuevas publicaciones que env\u00ede un correo a:
 label.authoring.advanced.learners  =los estudiantes
-label.authoring.advanced.teachers  =los profesores
+label.authoring.advanced.teachers  =los instructores
 event.newposting.subject  =Foro: {0}
 event.newposting.body  ={0}: \n {1}\n\n - correo electr\u00f3nico enviado autom\u00e1ticamente por LAMS
 label.authoring.basic.do.you.want.to.delete  =\u00bfEst\u00e1s seguro que quieres eliminar este tema?
@@ -255,4 +247,4 @@ label.anonymous  =Anonimo
 label.anonymous.tooltip  =Seleccione "Publicar an\u00f3nimamente" si quiere esconder su nombre a otros estudiantes. El instructor a\u00fan podr\u00e1 ver su nombre.
 
 
-#======= End labels: Exported 247 labels for es ES =====
+#======= End labels: Exported 239 labels for es ES =====
