--- a/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = images
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Thu Mar 02 01:28:02 CST 2017 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:50:32 CST 2018 
  
 #=================== labels for Image Gallery =================# 
 
@@ -12,8 +12,6 @@ label.authoring.basic.instruction  =Instructions
 activity.helptext  =Uploading your images to share with others.
 tool.display.name  =Image Gallery tool
 tool.description  =Tool for sharing images.
-errorPage.title  =Error page
-errorPage.heading  =Some error occurs when handling your request
 label.authoring.heading  =Image Gallery - Authoring
 label.author.title  =Image Gallery - Authoring
 label.authoring.heading.basic  =Basic
@@ -43,62 +41,39 @@ label.authoring.cancel.button  =Cancel
 label.authoring.up  =Up
 label.authoring.down  =Down
 label.authoring.image  =Image
-authoring.exception  =There is a problem in image gallery authoring page, the reason is {0}
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 label.learning.add.new.image  =Add new image
 label.learning.title  =Image Gallery Learning
 label.learning.heading  =Image Gallery
 label.check.for.new  =Check for new
-label.suggest.new  =Suggest a new
-label.learning.ratings  =ratings
-label.learning.average.rating  =Average rating :
 label.learning.vote.here  =Select as favorite
 label.learning.unvote  =Remove as favorite
-label.learning.add.comment  =Add comment
-label.learning.post  =Post
-label.learning.by  =By
-label.learning.comments  =Comments
 label.learning.added.by  =Added by:
-label.learning.open.original.size  =Open original size
 monitoring.tab.summary  =Summary
 monitoring.tab.statistics  =Statistic
 monitoring.tab.edit.activity  =Edit activity
 monitoring.label.group  =Group
-monitoring.summary.note  =Note: number of learners indicates the learners who have viewed the resource.
 monitoring.label.title  =Title
 monitoring.label.suggest  =Suggested by
 monitoring.label.hide  =Hide
 monitoring.label.show  =Show
-monitoring.label.user.loginname  =Login
-monitoring.label.user.name  =Name
 label.monitoring.title  =Image Gallery - Monitor
-label.monitoring.number.rated  =Number of rated
 label.monitoring.average.rating  =Average rating
 label.monitoring.number.votes  =Number of favourites
 label.monitoring.by  =By
 label.monitoring.edit.activity.edit  =Edit
-label.monitoring.summary.overall.summary  =Summary
 label.monitoring.summary.title.reflection  =Notebook entry
 label.monitoring.summary.add.new.image  =Add new image
 label.monitoring.imagesummary.image.summary  =Image summary
 label.monitoring.imagesummary.save  =Save
 label.monitoring.imagesummary.user  =Learner
 label.monitoring.imagesummary.comments  =Comments
-label.monitoring.imagesummary.rating  =Rating
 label.monitoring.imagesummary.voted.for.this.image  =Favourites for this image?
 label.monitoring.imagesummary.image  =Image
-label.monitoring.updatecomment.update.comment  =Update comment
-label.monitoring.updatecomment.comment  =Comment
 label.monitoring.updatecomment.save  =Save
-label.monitoring.updatecomment.posted.by  =Posted by
-label.monitoring.updatecomment.posted.on  =Posted on
-label.export.uploaded.by  =Uploaded by
-label.export.voted.for.this.image  =Favorite image
-label.export.images  =Images
-message.monitoring.edit.activity.not.editable  =This activity is no longer editable
-output.desc.learner.number.of.images.uploaded  =Number of images uploaded by user
-output.desc.learner.number.of.comments  =Number of comments posted by user
-output.desc.learner.number.of.votes  =Number of images selected as favorite by user
+output.desc.learner.number.of.images.uploaded  =Number of images uploaded
+output.desc.learner.number.of.comments  =Number of comments posted
+output.desc.learner.number.of.votes  =Number of images selected as favourite
 error.resource.image.not.alowed.format  =Allowed file formats: gif, png, jpg
 error.resource.image.not.alowed.format.for  =Error occurred uploading {0}. Allowed file formats: gif, png, jpg
 error.resource.item.file.blank  =File can not be blank.
@@ -113,7 +88,6 @@ error.msg.number.format.exception  =Number format exception occurs when parsing 
 error.msg.invaid.param.upload  =InvalidParameterException occured while trying to upload File.
 error.msg.default.content.not.find  =Could not retrieve default content record for this tool.
 warning.msg.authoring.do.you.want.to.delete  =Do you really want to delete this image?
-warning.msg.monitoring.do.you.want.to.delete  =Do you really want to delete this comment?
 label.delete  =Delete
 label.view  =View
 label.edit  =Edit
@@ -130,19 +104,16 @@ title.reflection  =Notebook entry
 monitoring.user.reflection  =Notebook entry
 activity.title  =Image Gallery
 label.authoring.save.button  =Save
-monitoring.label.access.time  =Access time
 label.authoring.advance.lock.on.finished  =Lock when finished
 label.authoring.heading.advance  =Advanced
 label.continue  =Continue
 monitoring.user.fullname  =Name
 button.close  =Close
-label.monitoring.heading.access  =Learners
 label.finished  =Next Activity
 label.finish  =Finished
 error.msg.repository  =A repository error occurred while trying to upload the file.
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
 message.activityLocked  =The instructor has set this activity not to allow you to view or share any more resources after you have finished it.
-label.export.reflection  =Notebook entries
 message.warnLockOnFinish  =Note: After you click on Next Activity, if you come back to this Image Gallery, you will not be able to share new resources.
 label.on  =On
 label.off  =Off
@@ -157,10 +128,7 @@ admin.maximum.dimensions.thumbnail.image  =Maximum dimensions of thumbnail image
 admin.success  =Configuration successfully saved.
 admin.return  =Return to maintain LAMS
 admin.button.save  =Save
-label.default.user.name  =Instructor
-event.imagesubmit.subject  =LAMS: Learner submitted an image in image gallery tool
 event.imagesubmit.body  =The learner {0} submitted an image in a image gallery tool.\n\nThis message was send automatically, following tool''''s advanced settings.
-output.desc.uploaded.images.urls  =Image Gallery: images uploaded by learners
 label.learning.delete.image  =Delete image
 label.submit  =Finish
 label.posted.by  ={0} on {1}
@@ -169,7 +137,6 @@ label.activity.completion  =End of activity
 errors.maxfilesize  =Image exceeds maximum file size {0}
 label.rating.criterias  =Rating criterias
 label.add.criteria  =Add criteria
-label.number.of.votes  ={0} / {1} votes
 label.rate.limits.reminder  =Rating limitation: Minimum {0} and Maximum {1}.
 label.rate.limits.topic.reminder  =You have rated {0} images already.
 label.rate.limits.reminder.min  =You must rate at least {0} images.
@@ -187,4 +154,4 @@ warning.minimum.number.words  =There is a minimum required number of words in a 
 label.upload.info  =Uploaded file must not exceed size of {0}
 
 
-#======= End labels: Exported 179 labels for en AU =====
+#======= End labels: Exported 146 labels for en AU =====
