--- a/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_lamc/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = mcq
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:48:43 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:46:02 CST 2018 
  
 #=================== labels for Multiple Choice Questions =================# 
 
@@ -139,8 +139,8 @@ label.randomize  =Present answers in randomized order
 message.no.reflection.available  =No notebook available
 label.attempt.count  =Attempt count:
 label.final.attempt  =Final attempt:
-output.desc.learner.mark  =Learner's total mark
-output.desc.learner.all.correct  =Are learner's answers all correct?
+output.desc.learner.mark  =Total marks
+output.desc.learner.all.correct  =All answers correct
 label.displayAnswers  =Display correct answers, score and feedback after last question
 label.monitoring.yesDisplayAnswers  =Learners are able to see the answers for the questions.
 label.monitoring.noDisplayAnswers1  =Learners are not able to see answers, scores or feedback for the questions
