--- a/lams_tool_larsrc/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_larsrc/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,7 +2,7 @@ appName = shareresources
 #language code: es 
 #locale code: ES 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 04:50:52 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Mon May 21 23:51:29 CST 2018 
  
 #=================== labels for ShareResources =================# 
 
@@ -40,7 +40,7 @@ label.authoring.basic.resource.url.input  =URL
 label.authoring.basic.resource.file.input  =Archivo
 label.authoring.basic.resource.description.input  =Descripci\u00f3n
 label.authoring.basic.resource.zip.file.input  =Archivo zip
-label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez terminado
+label.authoring.advance.lock.on.finished  =No permitir modificaciones una vez finalizada la actividad.
 label.authoring.advance.run.content.auto  =Presentar el contenido directamente (si hay solo un recurso)
 label.authoring.advance.mini.number.resources.view  =N\u00famero m\u00ednimo de recursos para ver
 label.authoring.advance.allow.learner.add.urls  =Permitir a los estudiantes a\u00f1adir URLs
@@ -71,7 +71,7 @@ label.learning.heading  =Recursos Compartidos
 label.resoruce.to.review  =Recursos
 label.learning.minimum.review  =Debe de ver al menos {0} de los recursos
 lable.learning.minimum.view.number.less  =El m\u00ednimo n\u00famero de recursos vistos para finalizar esta actividad es {0}. Vea los recursos que le faltan
-label.check.for.new  =Refrescar lista
+label.check.for.new  =Actualizar lista
 label.suggest.new  =A\u00f1adir nuevo recurso
 label.learning.new.file  =Detalles de archivo:
 label.learning.new.url  =Detalles de URL:
@@ -117,14 +117,14 @@ label.hide  =Esconder
 label.save  =Guardar
 label.cancel  =Cancelar
 monitoring.label.access.time  =Fecha
-define.later.message  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
+define.later.message  =Por favor, espere a que el instructor finalice el contenido de esta actividad.
 message.monitoring.summary.no.resource.for.group  =No se encuentran recursos para este grupo
 button.try.again  =Intente nuevamente
 open.in.new.window  =Abrir URL en nueva ventana
 label.up  =Mover para arriba
 label.down  =Mover para abajo
 label.monitoring.heading.access  =Lista de estudiantes
-label.authoring.advanced.reflectOnActivity  =\u00bfAgregar un anotador al final de Recursos Compartidos?
+label.authoring.advanced.reflectOnActivity  =A\u00f1adir reflexi\u00f3n al final de esta actividad con las siguientes instrucciones:
 error.reflection.emtpy  =Agregar reflexi\u00f3n
 title.reflection  =Reflexi\u00f3n
 label.continue  =Continuar
@@ -145,8 +145,8 @@ monitoring.label.instructions  =Instrucciones
 label.on  =Si
 label.off  =No
 monitor.summary.th.advancedSettings  =Opciones Avanzadas
-monitor.summary.td.addNotebook  =Agregar anotador al finalizar Recursos
-monitor.summary.td.notebookInstructions  =Instrucciones para anotador
+monitor.summary.td.addNotebook  =A\u00f1adir reflexi\u00f3n al finalizar actividad.
+monitor.summary.td.notebookInstructions  =Instrucciones de la reflexi\u00f3n
 label.authoring.advanced.notify.onassigmentsubmit  =Email instructors when a learner submits a resource
 event.assigment.submit.subject  =LAMS: estudiante ha enviado recurso.
 event.assigment.submit.body  =El estudiante {0} ha enviado un recurso. \n\nEste mensaje ha sido enviado autom\u00e1ticamente.
