--- a/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_sbmt/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = submitfiles
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sun Apr 01 19:30:12 CST 2018 
+ # Exported from the LAMS Community by Ernie Ghiglione on Tue May 22 00:46:51 CST 2018 
  
 #=================== labels for Submit Files =================# 
 
@@ -62,7 +62,6 @@ label.monitoring.saveMarks.button  =Save
 label.monitoring.finishedMarks.button  =Finished
 label.monitoring.edit.activity.edit  =Edit activity
 label.monitoring.edit.activity.cancel  =Cancel
-label.monitoring.edit.activity.update  =Update activity
 monitoring.statistic.title  =Statistic for monitoring
 monitoring.statistic.marked  =Marked files:
 monitoring.statistic.not.marked  =Not marked files:
@@ -81,7 +80,7 @@ label.submit.file.suffix  =submitted the following files
 label.assign.mark.message.prefix  =Please assign a mark and a comment for the report by
 label.session.name  =Session name
 label.count  =Count
-label.no.user.available  =No user available
+label.no.user.available  =No data
 msg.mark.released  =Marks in {0} have been released.
 error.title.blank  =Title can not be blank.
 label.authoring.advanced.reflectOnActivity  =Add a notebook at end of Submit Files with the following instructions:
@@ -165,4 +164,4 @@ label.waiting.for.leader.launch.time.limit  =Leader has not started the activity
 label.use.select.leader.tool.output  =Use leaders from Leader tool
 
 
-#======= End labels: Exported 157 labels for en AU =====
+#======= End labels: Exported 156 labels for en AU =====
